--- a/localisation/INOT_diplomacy_l_english.yml
+++ b/localisation/INOT_diplomacy_l_english.yml
@@ -1,39 +1,39 @@
 ﻿l_english:
-  improved_good:0 "Improved Relations"
-  improved_bad:0 "Severed Diplomatic Relations"
-  bulgaria-russo:0 "Slavic Unity"
-  czecho-russo:0 "Slavic Unity"
-  rus_improved_good:0 "Improved Relations"
-  yugo_russo:0 "Slavic Unity"
-  romania-russo:0 "Slavic Unity"
-  hungro-russo:0 "Slavic Unity"
-  franco-russo:0 "Franco-Russian Relations"
-  germano-russo:0 "Russo-Germanic Relations"
-  badfranco-russo:0 "Went with Germans"
-  badgermano-russo:0 "Went with French"
-  russo-japanese:0 "Improved Relations"
-  russo-communism:0 "Stands Against Communism"
-  RUS_bad_anglo_russo:0 "Refused Non-Aggression"
-  renewed_1920:0 "Renewed 1920 Agreement"
-  ger_diplo_mission:0 "German Diplomatic Mission"
+  improved_good:0 "관계 개선됨"
+  improved_bad:0 "외교 관계 단절됨"
+  bulgaria-russo:0 "슬라브 통합"
+  czecho-russo:0 "슬라브 통합"
+  rus_improved_good:0 "관계 개선됨"
+  yugo_russo:0 "슬라브 통합"
+  romania-russo:0 "슬라브 통합"
+  hungro-russo:0 "슬라브 통합"
+  franco-russo:0 "프랑스-러시아 관계"
+  germano-russo:0 "러시아-독일 관계"
+  badfranco-russo:0 "독일과 함께함"
+  badgermano-russo:0 "프랑스와 함께함"
+  russo-japanese:0 "관계 개선됨"
+  russo-communism:0 "공산주의에 대항함"
+  RUS_bad_anglo_russo:0 "불가침조약 거절함"
+  renewed_1920:0 "1920 조약 갱신함"
+  ger_diplo_mission:0 "독일 외교 사절"
   democratic_leanings:0 "독일의 민주주의"
-  Zollverein_mod:0 "Modern Zollverein"
-  ger_anti_rus_policy:0 "Anti-Russian Propoganda"
-  sided_with_allies:0 "Sided with the West"
+  Zollverein_mod:0 "현대 졸버린"
+  ger_anti_rus_policy:0 "반-러시아 선전"
+  sided_with_allies:0 "서방의 편"
   rus_russian_revolution:0 "유럽 혁명!"
-  GER_accept_british_naval_dominance_opinion:0 "Accept British Naval Dominance"
+  GER_accept_british_naval_dominance_opinion:0 "영국의 해군 우세 받아들임"
   Konig_pact:0 "쾨니히 조약"
   balkan_expansion:0 "발칸 정책"
   bel_diplo_mission:0 "벨기에 외교 사절"
-  ceased_trade_opinion:0 "Ceased Trade"
-  agreed_ceased_trade_opinion:0 "Agreed to Cease the Trade with the Germans"
-  refused_ceased_trade_opinion:0 "Refused to Cease Trade with the Germans"
+  ceased_trade_opinion:0 "무역 중단"
+  agreed_ceased_trade_opinion:0 "독일과의 무역 중단을 동의함"
+  refused_ceased_trade_opinion:0 "독일과의 무역 중단을 거절함"
   ##### Turkish Stuff #####
-  TUR_seize_russian_investments:0 "Seized Russian Businesses and Land"
-  purged_french_presence:0 "Purged French Presence"
-  FTU_drills_with_ENG:0 "Training with England"
-  purged_french_presence:0 "French Presence Restrained"
-  FTU_remained_with_france:0 "Remained with France"
-  FTU_demanded_partition:0 "Demanded Patriation"
+  TUR_seize_russian_investments:0 "러시아인 사업과 토지를 압수"
+  purged_french_presence:0 "프랑스 주둔군 몰아냄"
+  FTU_drills_with_ENG:0 "영국과의 훈련"
+  purged_french_presence:0 "프랑스 주둔군 억제"
+  FTU_remained_with_france:0 "프랑스와 계속 함께함"
+  FTU_demanded_partition:0 "가부장제 요구됨"
 
 
