--- a/localisation/aus_ideas_l_english.yml
+++ b/localisation/aus_ideas_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- AUS_idea_a_hitler:0 "Adolf Hitler"
+ AUS_idea_a_hitler:0 "아돌프 히틀러"
  
  ###
- is_time:0 "Elections have passed"
+ is_time:0 "선거 지나감"
