--- a/localisation/bav_ideas_l_english.yml
+++ b/localisation/bav_ideas_l_english.yml
@@ -29,7 +29,7 @@
   BAV_rus_mil_tt:0 "뮌헨에 §Y5 러시아 민병대 사단§!을 배치합니다."
   BAV_sonder_tt:0 "뮌헨에 §Y3 차량화사단§!을 배치합니다."
   BAV_rhine_indus_tt:0 "§R라인란트를 점유하고 있어야 그 효과를 볼 수 있습니다§!."
-  BAV_wut_indus_tt:0 "§R뷔템베르크를 점유하고 있어야 그 효과를 볼 수 있습니다§!."
+  BAV_wut_indus_tt:0 "§R뷔르템베르크를 점유하고 있어야 그 효과를 볼 수 있습니다§!."
   BAV_sonder_tt:0 "뮌헨에 §Y3 차량화사단§!을 배치합니다."
   BAV_bol_generals_tt:0 "군대에 §Y장군 한 명§!을 추가합니다."
   GER_westwall_tt:0 "프랑스 국경에 요새 건설"
