--- a/localisation/chi_focus_l_english.yml
+++ b/localisation/chi_focus_l_english.yml
@@ -307,6 +307,6 @@
  CHI_deal_with_chiang_desc:0 "We should decide how to deal with the Generalissimo."
 
 CHI_left_infra:0 "§MThis focus will enact new decisions to build up the infrastructure in China." 
-chinese_front:0 "Chinese United Front"
+chinese_front:0 "중국 통일전선"
 
 POLITICS_HU_HANMIN_DESC:0 "Hu Hanmin has been Chairman of the Kuomintang since 1928. When the army was beaten by the Beiyang Army, the Kuomintang were humilated and had to retreat behind the Yangtze river. While Hu supported Chiang after the 1927 Ninghan incident he realized how the situation had changed and he shortly allied with Wang to use Chiang as the scapegoat for the defeat. Through this Hu Hamnin asserted his control over the right wing and became Chairman of the Kuomintang. Hu Hamnin has been trying to keep Chiang out of political affairs of the Kuomintang and desperatly tried to weaken the left wing of the KMT in last years with no success. During his almost eight year reign as Chairmen of the Central Executive Committee Hu Hamnin has tried to modernize the legal and penal systems, attempted to stabilize prices, improved public health facilities, amortize debts, reform the banking and currency system, modernized the Guandong Provinces, built a modern railway from Nanjing to Changsha, and tried to augment industrial and agricultural production. Not all of these projects were successfully completed and Hu Hamnin has felt very ill lately."
