--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -516,7 +516,7 @@
  POR_socialist:0 "포르투갈"
  POR_socialist_DEF:0 "포르투갈"
  POR_fascism:0 "포르투갈"
- POR_fascism_DEF:0 "국가생디칼리스트 포르투갈 공화국"
+ POR_fascism_DEF:0 "국가신디칼리스트 포르투갈 공화국"
  POR_democratic:0 "포르투갈 공화국"
  POR_democratic_DEF:0 "포르투갈 공화국"
  POR_conservatives:0 "포르투갈 공화국"
@@ -2702,17 +2702,17 @@
  RHN_democratic_ADJ:0 "라인"
  RHN_communism_ADJ:0 "라인"
  
- WUT_neutrality:0 "바덴-뷔템베르크"
- WUT_neutrality_DEF:0 "바덴-뷔템베르크"
- WUT_democratic:0 "바덴-뷔템베르크"
- WUT_democratic_DEF:0 "바덴-뷔템베르크 공화국"
- WUT_communism:0 "바덴-뷔템베르크 코뮌"
- WUT_communism_DEF:0 "바덴-뷔템베르크 코뮌"
+ WUT_neutrality:0 "바덴-뷔르템베르크"
+ WUT_neutrality_DEF:0 "바덴-뷔르템베르크"
+ WUT_democratic:0 "바덴-뷔르템베르크"
+ WUT_democratic_DEF:0 "바덴-뷔르템베르크 공화국"
+ WUT_communism:0 "바덴-뷔르템베르크 코뮌"
+ WUT_communism_DEF:0 "바덴-뷔르템베르크 코뮌"
  WUT_fascism:0 "슈바벤 제국"
  WUT_fascism_DEF:0 "슈바벤 제국"
- WUT_neutrality_ADJ:0 "바덴-뷔템베르크"
- WUT_democratic_ADJ:0 "바덴-뷔템베르크"
- WUT_communism_ADJ:0 "바덴-뷔템베르크"
+ WUT_neutrality_ADJ:0 "바덴-뷔르템베르크"
+ WUT_democratic_ADJ:0 "바덴-뷔르템베르크"
+ WUT_communism_ADJ:0 "바덴-뷔르템베르크"
  WUT_fascism_ADJ:0 "슈바벤"
  
  SAX_neutrality:0 "작센 왕국"
