--- a/localisation/factions_l_english.yml
+++ b/localisation/factions_l_english.yml
@@ -1,4 +1,26 @@
 ﻿l_english:
+ FACTION_LEADER:0 "세력 맹주국: §Y$COUNTRY$§!"
+ FACTION_MEMBER:0 "세력 회원국: §Y$COUNTRY$§!"
+ FACTION_NAME_GER_fascism:0 "추국국"
+ FACTION_NAME_GER_none:0 "추축국"
+ FACTION_NAME_IDEOLOGY_DEFAULT:0 "$IDEOLOGY$의 지지국"
+ french_alliance:0 "프랑스 동맹"
+ the_berlin_moscow_axis:0 "베를린-모스크바 추축국"
+ domination_francaise:0 "프랑스 지배권"
+ french_entente_alliance:0 "프랑스-협상국 동맹"
+ daitoa_kyoeiken:0 "대동아공영권"
+ italy_empire_faction:0 "신로마제국"
+ chinese_united_front:0 "국공합작"
+ miedzymorze_faction:0 "미엥지모제"
+ Allies:0 "연합국" #allies version
+ Axis:0 "추국국"
+ Comintern:0 "코민테른"
+ western_pacific_sphere:0 "서태평양권"
+ south_west_pacific_initiative:0 "남서태평양 주도권"
+ north_american_alliance:0 "북아메리카 동맹"
+ northern_sovereignty_coalition:0 "북부주권반국가동맹"
+ SAF_faction_uotap:0 "아프리카 인민연합"
+ ######################################
  eastern_coalition:0 "동부 연합"
  japan_faction:0 "대동아공영권"
  German_Confederacy:0 "베를린 조약"
