--- a/localisation/ger_ideas_l_english.yml
+++ b/localisation/ger_ideas_l_english.yml
@@ -3,9 +3,9 @@
   GER_wilhelm_III:0 "황태자 빌헬름 III"
   GER_idea_nationalism:0 "독일 민족주의"
   GER_passive_army:0 "방위군"
-  GER_german_paramilitarism:0 "Schwarze Reichswehr"
-  GER_taxes:0 "Increased Tarifs"
-  GER_polish_people:0 "Polish Immigrants"
+  GER_german_paramilitarism:0 "흑색 국가방위군"
+  GER_taxes:0 "세금 인상"
+  GER_polish_people:0 "폴란드 이민자들"
   GER_youth_army:0 "프로이센 청년단"
   GER_no_german_nobility:0 "귀족 해체"
   GER_germ_federation:0 "독일 연방"
@@ -28,10 +28,10 @@
   GER_air_innovations_1_idea:0 "공군 개혁"
   GER_economic_boom:0 "경제 호황"
   GER_blitz_krieg:0 "전격전"
-  GER_washington_treaty:0 "Restrictions of the Washington Treaty"
-  GER_washington_treaty_desc:0 "After the Great War, a great effort was made to prevent the dreadnought race between Japan, the United States, Russia and the United Kingdom. It also restricted Prussian navy size. The Kaiserliche Marine was allowed to maintain 2 battleships; the Bayern and the Schleswig-Holstein."
-  GER_naval_revival_tt:0 "Germany will revive its old reserve fleet consisting of 1 Battleship, 3 Heavy Cruisers, 6 Light Cruisers and 3 Destroyers!"
-  GER_scharnhorst_programme:0 "Niederdeutschland and Prussia will gain 1 battleship each. If Niederdeutschland is annexed, Prussia will gain 2 battleships."
+  GER_washington_treaty:0 "워싱턴 조약의 제한"
+  GER_washington_treaty_desc:0 "세계 대전이 끝난 후, 일본, 미국, 러시아, 영국은 무서운 건함 경쟁을 막기 위해 많은 노력을 기울였습니다. 프로이센 해군 규모도 제한했습니다. 제국 해군는 바이에른함와 슐레스비히 홀슈타인함 두 척의 전함을 유지할 수 있었습니다."
+  GER_naval_revival_tt:0 "독일은 전함 1척, 중순양함 3척, 경순양함 6척, 구축함 3척으로 구성된 예전의 예비 함대를 부활시킬 것입니다!"
+  GER_scharnhorst_programme:0 "저지 독일이 프로이센은 각각 1척의 전함을 얻게 됩니다. 저지 독일이 합병되었다면 프로이센은 2척의 전함을 얻게 됩니다."
   konig_pact_idea:0 "쾨니히 조약"
   konig_pact_idea_desc:0 "독일과 러시아 모두에게 평화와 화합을 이루기 위해 혜택을 줄 협약이다."
  ideology_boosting_decisions:0 "여당 지원 확대"
