--- a/localisation/ita_events_l_english.yml
+++ b/localisation/ita_events_l_english.yml
@@ -1,35 +1,35 @@
 ﻿l_english: 
- italy.1000.t:0 "Communists Consolidate Power"
+ italy.1000.t:0 "공산주의자들이 권력을 굳히다"
  italy.1000.d:0 "The turmoil in Italy is finally over. As the dust settles, Communists consolidate power in Rome.\n Their control of Italy is no longer disputed. While recovering, Italy stands on crossroads; to expand its influence or to establish a more peaceful realpolitik policy.\nOnly time will tell where Italy is heading..."
- italy.1000.a:0 "Alright"
- italy.1000.b:0 "Alright"
- italy.1001.t:0 "Blackshirts Consolidate Power"
+ italy.1000.a:0 "알았다."
+ italy.1000.b:0 "알았다."
+ italy.1001.t:0 "검은 셔츠단이 권력을 굳히다"
  italy.1001.d:0 "The turmoil in Italy is finally over. As the dust settles, Nationalists under Mussolini consolidate power in Rome.\n Their control of Italy is no longer disputed. While recovering, Italy stands on crossroads; to expand its influence or to establish a more peaceful realpolitik policy.\nOnly time will tell where Italy is heading..."
- italy.1001.a:0 "Alright"
- italy.1001.b:0 "Alright"
- italy.1002.t:0 "Conservatives Consolidate Power"
+ italy.1001.a:0 "알았다."
+ italy.1001.b:0 "알았다."
+ italy.1002.t:0 "보수주의자들이 권력을 굳히다"
  italy.1002.d:0 "The turmoil in Italy is finally over. As the dust settles, the legitimate government consolidates power in Rome.\n Their control of Italy is no longer disputed. While recovering, Italy stands on crossroads; to expand its influence or to establish a more peaceful realpolitik policy.\nOnly time will tell where Italy is heading..."
- italy.1002.a:0 "Alright"
- italy.1002.b:0 "Alright"
- italy.1004.t:0 "March on Rome!"
+ italy.1002.a:0 "알았다."
+ italy.1002.b:0 "알았다."
+ italy.1004.t:0 "로마로 진군하라!"
  italy.1004.d:0 "Blackshirts assembled on the plain of the river Po and took position at strategic points. Armed fascist troops gathered outside Rome before marching into the city. As a reaction, Communist militias also gathered to fight ultra-right Mussolini and demand power.\nThis is unprecedented! We must decide how to react and act to this threat of coup d'etat."
- italy.1004.a:0 "We must defend democracy!"
- italy.1004.b:0 "We cannot afford a bloodbath in Rome..."
- italy.1004.c:0 "Join the Communists!"
- italy.1006.t:0 "Kosovo For Non-Aggression"
+ italy.1004.a:0 "민주주의를 수호해야 한다!"
+ italy.1004.b:0 "로마를 피바다로 만들 수는 없다..."
+ italy.1004.c:0 "공산주의자들과 함께하라!"
+ italy.1006.t:0 "불가침조약을 위한 코소보"
  italy.1006.d:0 "Italian government has approached us with a proposition. It is clear that they want our land, perhaps if we accept to their demands and cede Kosovo to Italy we might avoid full-on conflict with a major power. This non-aggression will buy us more time to prepare...\nWhat can possibly go wrong?"
  italy.1006.a:0 "Agree to the Treaty"
- italy.1006.b:0 "No Way!"
- italy.1007.t:0 "Serbia Accepts"
+ italy.1006.b:0 "절대 안 돼!"
+ italy.1007.t:0 "세르비아가 받아들이다"
  italy.1007.d:0 "Serbia has accepted our proposition, we shall now occupy Albanian regions of Kosovo and establish our protectorate.\n This treaty also included a temporary non-aggression pact. We can no longer invade Serbia for time of the treaty."
  italy.1007.a:0 "Good"
- italy.1008.t:0 "Serbia Decines"
- italy.1008.d:0 "Serbia has declined our offer. This only means, they are hostile to our regime and our claims. We shall prepare for immidiate intervention.\nBegin the mobilization..."
+ italy.1008.t:0 "세르비아가 거부하다"
+ italy.1008.d:0 "Serbia has declined our offer. This only means, they are hostile to our regime and our claims. We shall prepare for immidiate intervention.\n군대 동원을 시작하라..."
  italy.1008.a:0 "This might not end will for Serbia"
- italy.1009.t:0 "March on Rome"
+ italy.1009.t:0 "로마 진군"
  italy.1009.d:0 "Blackshirts assembled on the plain of the river Po and took position at strategic points. Armed fascist troops gathered outside Rome before marching into the city. As a reaction, Communist militias also gathered to fight ultra-right Mussolini and demand power.\n It remains unclear whether coup is successful, world awaits until the dust is settled..."
- italy.1009.a:0 "Interesting"
- italy.1009.b:0 "Right"
+ italy.1009.a:0 "흥미롭군."
+ italy.1009.b:0 "좋아."
  italy.1010.t:0 "Italy in Chaos!"
  italy.1010.d:0 "After initial March on Rome was crushed, it was thought that government will finally be reinforced by new coalition.\nHowever a much stronger strike has occured, this time the police has taken blackshirts' side, this means that armed conflict is imminent, battle for the Italy has begun..."
  italy.1010.a:0 "Revolutionaries will be crushed!"
@@ -43,8 +43,8 @@
  italy.1012.b:0 "He won't cause problems"
  italy.1013.t:0 "Benito Mussolini Arrested"
  italy.1013.d:0 "The notorious leader of the Fascist party of Italy has been recently arrested by the law enforcement.\nMussolini has risen from ranks of socialists to the leader of the National Fascist Party for his orator skills and wish to proclaim the Greater Italy. He wants Italy to be strong and independent and to regain its lost Roman frontiers."
- italy.1013.a:0 "Interesting"
- italy.1013.b:0 "Interesting"
+ italy.1013.a:0 "흥미롭군."
+ italy.1013.b:0 "흥미롭군."
  italy.1014.t:0 "Mussolini Gathers His Supporters"
  italy.1014.d:0 "The recent Mussolini's speech has gained a lot of support from the population. The Fascist party's popularity is at all time high. This could endanger our stability and economic situation.\nWe must keep an eye on him."
  italy.1014.a:0 "Sure we will"
@@ -58,8 +58,8 @@
  italy.1016.b:0 "It's too risky"
  italy.1017.t:0 "Mussolini found dead"
  italy.1017.d:0 "It seems like the luck is on our side. Benito Mussolini, the leader of the fascist party was found dead. Further investigation showed that he was murdered by his own co-consirators.\nBenito has recently escaped from prison and went into hiding. Perhaps his supporters thought of this as a sign of weakness and decided that he can no longer lead them."
- italy.1017.a:0 "Great News"
- italy.1018.t:0 "Blackshirts' Uprising"
+ italy.1017.a:0 "훌륭한 소식이다."
+ italy.1018.t:0 "검은 셔츠단의 봉기"
  italy.1018.d:0 "Following our successful affair to assassinate the leader of the Fascist Party, the blackshirts have gained even more support from the population.\nThey believe that our government and regime is totalitarian that does not allow democracy and freedom. This sparked uprisings in the South which now turned into combat between blackshirt militia and the police.\nThe battle for Italy has begun."
  italy.1018.a:0 "Revolutionaries will be crushed!"
  italy.1018.b:0 "We need The King on our side!"
@@ -89,30 +89,30 @@
  italy.10006.b:0 "The King must abdicate"
  italy.10007.t:0 "Italian King abdicates"
  italy.10007.d:0 "A new Italian Republic was formed.\nIt was annouced yesterday that the King of Italy abdicated in favour of the Republican state of Italy. Only time will tell whether this is beneficial for the Italian state."
- italy.10007.a:0 "Interesting"
- italy.10007.b:0 "Interesting"
+ italy.10007.a:0 "흥미롭군."
+ italy.10007.b:0 "흥미롭군."
 
  ####### Leverage & Related Events #######
 
- italy.252.t:0 "Italy offers to raise Alpini"
- italy.252.d:0 "The Italian embassy has come to us with an interesting offer; They will raise, equip, and train two divisions of elite Alpini for our army. This could cover some gaps in our defense spending, but accepting it could make use seem dependant."
- italy.252.a:0 "Absolutely, it will help in our defense."
- italy.252.b:0 "We can't allow ourselves to become indebted."
- italy.3001.t:0 "The allies said no!"
- italy.3001.d:0 "In regards to our recent proposal, the allies have given us a very politely written "No"."
- italy.3001.a:0 "Oh, alright."
- italy.3002.t:0 "The allies said yes!"
- italy.3002.d:0 "The allies have agreed to the proposal we recently put forward, thus increasing our leverage with them! "
- italy.3002.a:0 "Wonderful news!"
- italy.363.t:0 "Italy offers to transfer half of her naval production!"
- italy.363.d:0 "The Italians have posited to us that, should we give further diplomatic recognition to their sacrifice during the war (Which would give them further power to leverage over us), they would give us half of their naval production."
- italy.363.a:0 "More ships? Send our confirmation immediatly!"
- italy.363.b:0 "We cannot allow the italians more political leverage."
+ italy.252.t:0 "이탈리아가 알피니를 키우겠다고 제안하다"
+ italy.252.d:0 "이탈리아 대사관이 우리에게 흥미로운 제안을 했다. 그들은 우리 군대를 위해 정예 알피니 2개 사단을 키우고, 장비하고, 훈련시킬 것이다. 이것은 우리의 국방비 지출에서 약간의 차이를 커버할 수 있지만, 그것을 받아들이는 것은 사용을 의존적으로 보이게 할 수 있다."
+ italy.252.a:0 "물론, 그것은 우리의 방어에 도움이 될 것이다."
+ italy.252.b:0 "우리는 빚을 지는 것을 용납할 수 없다."
+ italy.3001.t:0 "연합국이 거부하다!"
+ italy.3001.d:0 "최근 우리의 제안에 대해, 연합국은 매우 정중하게 "아니오"라고 써주었습니다."
+ italy.3001.a:0 "오, 알았다.."
+ italy.3002.t:0 "연합국이 승락하다!"
+ italy.3002.d:0 "연합국은 우리가 최근에 제안한 제안에 동의했고, 따라서 그들과 함께 우리의 영향력을 늘렸습니다!"
+ italy.3002.a:0 "훌륭한 소식이다!"
+ italy.363.t:0 "이탈리아가 해군 생산량의 절반을 이전하겠다고 제안하다!"
+ italy.363.d:0 "이탈리아인들은 우리에게 전쟁 중에 그들의 희생을 더 외교적으로 인정한다면(그들이 우리를 더 많이 활용할 수 있는 힘을 갖게 될 것이다) 그들은 우리에게 그들의 해군 생산량의 절반을 줄 것이라고 주장해왔습니다."
+ italy.363.a:0 "더 많은 선박이라고? 확인서를 즉시 보내라!"
+ italy.363.b:0 "우리는 이탈리아인들에게 더 많은 정치적 영향력을 허용할 수 없다."
  italy.353.t:0 "Italians offer to finish the Cape to Cairo Rail Link"
  italy.353.d:0 "The Cape to Cairo, a proposal made to simplify imperial administration has, since it's beginning, seen endless delays. The programme was finally made possible with the end of the great war, seeing the transfer of German territories and thus allowing a contigous, red line down the continent. Unfortunately, actually filling the railway gap has proved an issue. Gauge, rainforest, desert, all throw up huge barriers to the project. Until now, anyways. The Italian government, flush with funding in it's recent economic boom, has offered to foot the bill of a completion of a railway from Cape Town to Cairo, linking the gaps, and standardising the entire line's rolling stock and gauge. Of course, this comes with distasteful, political strings attached. It would allow us to integrate Egypt, however."
  italy.353.a:0 "We would be mad to refuse!"
  italy.353.b:0 "Blatent bribery."
  italy.365.t:0 "Transfer of the Horn"
  italy.365.d:0 "Italy has come to us, offering to transfer the Horn of Africa. Though of little practical use, the territory undoubtably could be used against us if Italy were to turn unfriendly, and by securing it we further entrench ourselves on the dark continent."
- italy.365.a:0 "Absolutely."
+ italy.365.a:0 "물론이다."
  italy.365.b:0 "We would be left in the Itallian's debt once again."
