--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -106,7 +106,7 @@
  AUS_conservatives_party:0 "CS"
  AUS_conservatives_party_long:0 "기독사회당"
  AUS_socialist_party:0 "SPÖ"
- AUS_socialist_party:0 "오스트리아 사회민주당"
+ AUS_socialist_party_long:0 "오스트리아 사회민주당"
 
  CHI_communism_party:0 "Communist Rebels"
  CHI_communism_party_long:0 "The Communist Underground\n§g After the Shangai Massacre where thousands of support of the CPC where killed, the communist party was supressed in the entire Republic. Every member of the party or supporter would be hunted down to their death by republican forces. The Main forces of the CPC undertook the long march and flew to the western mouintans of China. The last communist supporters in the republic are hidding and consist only of a handful of people."
@@ -254,16 +254,16 @@
  TUR_neutrality_party:0 "CHP"
  TUR_neutrality_party_long:0 "공화인민당"
 
- HUN_fascism_party:0 "Horthy Resistance"
- HUN_fascism_party_cw:0 "Horthy Government"
+ HUN_fascism_party:0 "호르티 저항군"
+ HUN_fascism_party_cw:0 "호르티 정부"
  HUN_communism_party:0 "KMP"
- HUN_communism_party_long:0 "Kommunisták Magyarországi Pártja"
+ HUN_communism_party_long:0 "헝가리 공산당"
  HUN_democratic_party:0 "SZDP"
- HUN_democratic_party_long:0 "Szociáldemokrata Párt"
- HUN_socialist_party:0 "Szocialista Párt"
- HUN_conservatives_party:0 "Konzervatív Párt"
+ HUN_democratic_party_long:0 "사회민주당"
+ HUN_socialist_party:0 "사회당"
+ HUN_conservatives_party:0 "보수당"
  HUN_neutrality_party:0 "F48P"
- HUN_neutrality_party_long:0 "Függetlentségi és 48-as Párt"
+ HUN_neutrality_party_long:0 "독립48년당"
 
  ROM_neutrality_party:0 "FRN"
  ROM_neutrality_party_long:0 "Frontul Renasterii Nationale"
@@ -485,7 +485,7 @@
  KOR_communism_party:0 "WPK"
  KOR_communism_party_long:0 "조선로동당"
  KOR_democratic_party:0 "자유당"
- KOR_neutrality_party:0 "이왕가"
+ KOR_neutrality_party:0 "이씨 왕조"
  KOR_fascism_party:0 "NDPC"
  KOR_fascism_party_long:0 "국방정책위원회"
  ICE_democratic_party:0 "Progress Party"
