--- a/localisation/rus_ideas_l_english.yml
+++ b/localisation/rus_ideas_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  RUS_GER_pact:0 "쾨니히 조약"
- RUS_GER_pact_desc:0 "러시아와 독일 사이에 서명된 쾨니히 조약은 중앙유럽과 발칸 지역의 신뢰를 결정지었다."
+ RUS_GER_pact_desc:0 "러시아와 독일 사이에 서명된 쾨니히 조약은 중앙유럽과 발칸 지역의 신뢰를 결정지었습니다."
  RUS_imperial_navy:0 "러시아 제국 해군"
  RUS_poor_infrastructure:0 "형편없는 기반시설"
  RUS_victorious_ww1:0 "대전쟁의 승리자들"
@@ -36,7 +36,7 @@
  RUS_multinational_society:0 "다문화 사회"
  RUS_cinema:0 "국가주도 영화 산업"
  RUS_general_staff:0 "군대 보수파" #New 
- RUS_general_staff_desc:0 "대전이 끝난 지 오래되었음에도 불구하고 러시아군은 1917년 독일과 오스트리아군을 격파했을 당시와 유사한 군사체제를 유지하고 있다. 하지만 구식이고, 결점투성이이며, 쓸모없는 데도 이 교리를 채용하고 있다."
+ RUS_general_staff_desc:0 "대전이 끝난 지 오래되었음에도 불구하고 러시아군은 1917년 독일과 오스트리아군을 격파했을 당시와 유사한 군사체제를 유지하고 있습니다. 하지만 구식이고, 결점투성이이며, 쓸모없는 데도 이 교리를 채용하고 있습니다."
  RUS_general_staff_1:0 "초기 현대화"
  RUS_general_staff_2:0 "중기 현대화"
  RUS_general_staff_3:0 "최종 현대화"
@@ -134,16 +134,16 @@
  Mikhail_inagurated:0 "권력을 잡은 차르 미하일"
  RUS_russian_coup:0 "러시아 지도력"
  RUS_no_step_back:0 "한 발자국도 물러서지 마라!"
- RUS_kornilovs_affair:0 "코닐로프의 문제"
- RUS_kornilovs_affair_desc:0 "러시아의 임시 정부는 취약한 정권임이 입증되었다. 코르닐로프 장군은 이 상황을 이용하여 러시아 제국의 지배권을 장악할 계획을 세우고 있다!"
+ RUS_kornilovs_affair:0 "코르닐로프 사건"
+ RUS_kornilovs_affair_desc:0 "러시아의 임시 정부는 취약한 정권임이 입증되었습니다. 코르닐로프 장군은 이 상황을 이용하여 러시아 제국의 지배권을 장악할 계획을 세우고 있습니다!"
  RUS_nationalization_industry:0 "국영화된 산업"
- rus_kornilov_dead:0 "암살된 코닐로프"
+ rus_kornilov_dead:0 "암살된 코르닐로프"
  rus_general:0 "새 러시아 정부 수립"
  rus_gov_is_set_up:0 "새 러시아 정부 수립"
- RUS_begin_modernization:0 "러시아 육군은 일련의 다양한 현대화를 겪게 될 것이며, 이 과정을 완료하는 데 대략 600일이 걸릴 것이다."
- RUS_keeps_the_old_guard:0 "군대 보수파는 은퇴하지 않을 것이다. 이것은 우리의 정치적 지배력을 높여주지만 약간의 화력을 희생시킬 것이다."
+ RUS_begin_modernization:0 "러시아 육군은 일련의 다양한 현대화를 겪게 될 것이며, 이 과정을 완료하는 데 대략 600일이 걸릴 것입니다."
+ RUS_keeps_the_old_guard:0 "군대 보수파는 은퇴하지 않을 것입니다. 이것은 우리의 정치적 지배력을 높여주지만 약간의 화력을 희생시킬 것입니다."
  RUS_iranian_terrain:0 "이란 지형"
- RUS_iranian_terrain_desc:0 "이란의 지형은 극도로 어렵고 침략하기 어렵다. 이란인들은 외부로부터의 침략자들을 물리치기 위해 그것을 이용할 것이다."
+ RUS_iranian_terrain_desc:0 "이란의 지형은 극도로 어렵고 침략하기 어렵습니다. 이란인들은 외부로부터의 침략자들을 물리치기 위해 그것을 이용할 것입니다."
 
  #Decisions
  RUS_army_actions:0 "군사적 행동"
