--- a/localisation/ser_events_l_english.yml
+++ b/localisation/ser_events_l_english.yml
@@ -30,12 +30,12 @@
  serbia.10.t:0 "Coup"
  serbia.10.d:0 "Placeholder.""
  serbia.10.a:0 "okay"
- serbia.11.t:0 "Serbia begins unification talks"
- serbia.11.d:0 "This morning, Alexander I and his advisors proposed to the state of Croatia the idea of unification. The idea of an united balkan country was a popular idea after the dissolvement of the Austrian-Hungarian Empire. But due to russian interests and Serbia not wanting ethnic terror, the idea was dropped. But it seems like, after all these years, Alexander the First wants to revive this dream.""
- serbia.11.a:0 "This is going to be interesting"
- serbia.12.t:0 "Yugoslavia"
- serbia.12.d:0 "After many days of negotiations, Croatia and Serbia came to an agreement regarding Unification. Serbia takes controll over the government but guarentees bosnian and croatian rights to avoid ethnic terror. A dream has come true, the Balkan states are finally united under the new state Yugoslavia. The leader of the country will be Alexander the First, he started the negotiations and is popular under the population. Alexander's next plans are to expand the Balkan League and strengthen the relations with the Great Powers.""
- serbia.12.a:0 "A new country in Europe"
+ serbia.11.t:0 "세르비아가 통일 회담을 시작하다"
+ serbia.11.d:0 "오늘 아침, 알렉산데르 1세와 그의 조언자들은 크로아티아국에 통일이라는 이상을 제안했습니다. 오스트리아-헝가리 제국이 해체된 후 발칸 연합국이라는 생각은 대중적인 생각이었습니다. 하지만 러시아의 이해관계와 세르비아는 인종 테러를 원하지 않았기 때문에, 그 생각은 철회되었습니다. 하지만, 오랜 세월이 흐른 후, 알렉산데르 1세는 이 꿈을 되살리고 싶어하는 것처럼 보입니다."
+ serbia.11.a:0 "이거 재미있을 것 같다."
+ serbia.12.t:0 "유고슬라비아"
+ serbia.12.d:0 "여러 날 간의 협상 끝에, 크로아티아와 세르비아는 통일과 관련한 합의에 도달했습니다. 세르비아는 정부를 장악하지만 보스니아와 크로아티아인의 인종 테러를 피하기 위해 권리를 보장합니다. 꿈이 실현되었습니다. 발칸 국가들은 마침내 유고슬라비아라는 새로운 국가 밑에서 연합하게 되었습니다. 그 나라의 지도자는 알렉산데르 1세가 될 것입니다. 그는 협상을 시작했고, 국민들에게 인기가 있습니다. 알렉산데르의 다음 계획은 발칸 연맹을 확장하고 강대국과의 관계를 강화하는 것입니다."
+ serbia.12.a:0 "유럽의 새로운 나라"
  serbia.13.t:0 "Invitation to the Balkan League"
  serbia.13.d:0 "The Serbian Government has invited us to the Balkan League.""
  serbia.13.a:0 "We accpet the offer"
