--- a/localisation/ser_ideas_l_english.yml
+++ b/localisation/ser_ideas_l_english.yml
@@ -1,14 +1,14 @@
 ﻿l_english:
- SER_peoples_army:0 "Mass Conscription"
- SER_workers_construction:0 "Workers Congress"
- SER_defensive_war:0 "Defensive War Council"
- SER_mobilization_speed:0 "Increase Mobilization"
- SER_modernization:0 "Modernization"
- SER_technology_treaty:0 "German Lessons"
- SER_production_efficiency:0 "Production Overhaul"
- SER_new_generation:0 "Mass Conscription"
- SER_balkan_league:0 "Balkan League"
- SER_woman_soldiers:0 "Woman Soldiers"
- SER_workers_strikes:0 "Worker Strikes"
- SER_alexander:0 "Alexander I"
+ SER_peoples_army:0 "대규모 징병"
+ SER_workers_construction:0 "노동자 의회"
+ SER_defensive_war:0 "방어 전쟁 의회"
+ SER_mobilization_speed:0 "차량화 증대"
+ SER_modernization:0 "현대화"
+ SER_technology_treaty:0 "독일 지도"
+ SER_production_efficiency:0 "생산 개선"
+ SER_new_generation:0 "대규모 징병"
+ SER_balkan_league:0 "발칸 동맹"
+ SER_woman_soldiers:0 "여군"
+ SER_workers_strikes:0 "노동자 파업"
+ SER_alexander:0 "알렉산데르 1세"
 
