--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -231,7 +231,7 @@
  STATE_230:0 "아르메니아"
  STATE_231:0 "조지아"
  STATE_232:0 "그로즈니"
- STATE_233:0 "캅카스"
+ STATE_233:0 "카프카스"
  STATE_234:0 "크라스노다르"
  STATE_235:0 "스타브로폴"
  STATE_236:0 "아스트라한"
