--- a/localisation/tur_ideas_l_english.yml
+++ b/localisation/tur_ideas_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
  TUR_communal_space:0 "공동체 생활"
- TUR_disjointed_nation:0 "Disjointed Nation"
- TUR_disjointed_nation_desc:0 "'터키의 아버지'는 개혁에 실패하여 국민들을 혼란스럽게 했고 러시아 정부와의 끊임없는 연계를 가졌다. 우리 민족은 새로운 지도자를 찾고 있고, 적절한 사람을 세울 때까지 만족하지 않을 것이다..."
+ TUR_disjointed_nation:0 "분열된 나라"
+ TUR_disjointed_nation_desc:0 "'터키의 아버지'는 개혁에 실패하여 국민들을 혼란스럽게 했고 러시아 정부와의 끊임없는 연계를 가졌습니다. 우리 민족은 새로운 지도자를 찾고 있고, 적절한 사람을 세울 때까지 만족하지 않을 것입니다..."
  TUR_minority_partisans:0 "소수의 파르티잔"
- TUR_minority_partisans_desc:0 "우리 나라는 러시아 정부의 자금 지원을 받는 소수 당파에 의해 지배되고 있다. 그들은 인구를 공포에 떨게 하고 우리의 자원을 훔친다! 우리는 이것을 멈춰야 한다..."
+ TUR_minority_partisans_desc:0 "우리 나라는 러시아 정부의 자금 지원을 받는 소수 당파에 의해 지배되고 있습니다. 그들은 인구를 공포에 떨게 하고 우리의 자원을 훔칩니다! 우리는 이것을 멈춰야 합니다..."
  TUR_expand_farming:0 "농공업 확대"
  TUR_live_with_land:0 "토지를 감수하다"
  TUR_eternal_state:0 "영원한 국가"
@@ -18,7 +18,7 @@
   BAV_rus_mil_tt:0 "뮌헨에 §Y5 러시아 민병대 사단§!을 배치합니다."
   BAV_sonder_tt:0 "뮌헨에 §Y3 차량화사단§!을 배치합니다."
   BAV_rhine_indus_tt:0 "§R라인란트를 점유하고 있어야 그 효과를 볼 수 있습니다§!."
-  BAV_wut_indus_tt:0 "§R뷔템베르크를 점유하고 있어야 그 효과를 볼 수 있습니다§!."
+  BAV_wut_indus_tt:0 "§R뷔르템베르크를 점유하고 있어야 그 효과를 볼 수 있습니다§!."
   BAV_sonder_tt:0 "뮌헨에 §Y3 차량화사단§!을 배치합니다."
   BAV_bol_generals_tt:0 "군대에 §Y장군 한 명§!을 추가합니다."
   GER_westwall_tt:0 "프랑스 국경에 요새 건설"
