--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -586,162 +586,162 @@
  VICTORY_POINTS_4516:0 "파트나"
  VICTORY_POINTS_12137:0 "러크나우"
  VICTORY_POINTS_9292:0 "첼랴빈스크"
- VICTORY_POINTS_4333:0 "Akmolinsk"
- VICTORY_POINTS_11752:0 "Zhangbei"
- VICTORY_POINTS_7418:0 "Xi'an"
- VICTORY_POINTS_4879:0 "Windhoek"
- VICTORY_POINTS_10412:0 "Richmond"
- VICTORY_POINTS_12715:0 "Mérida"
- VICTORY_POINTS_4904:0 "Campeche"
- VICTORY_POINTS_1900:0 "Tuxtla Gutiérrez"
- VICTORY_POINTS_12461:0 "Tijuana"
- VICTORY_POINTS_10769:0 "Reynosa"
- VICTORY_POINTS_5015:0 "Matamoros"
- VICTORY_POINTS_10889:0 "Coatzacoalcos"
- VICTORY_POINTS_2021:0 "Villahermosa"
- VICTORY_POINTS_8089:0 "Puebla"
- VICTORY_POINTS_8097:0 "Juárez"
- VICTORY_POINTS_2008:0 "León"
- VICTORY_POINTS_7921:0 "Durango"
- VICTORY_POINTS_8057:0 "Culiacán"
- VICTORY_POINTS_10895:0 "Mazatlán"
- VICTORY_POINTS_12736:0 "La Paz"
- VICTORY_POINTS_10830:0 "Chihuahua"
- VICTORY_POINTS_1892:0 "Ensenada"
- VICTORY_POINTS_4908:0 "Guaymas"
- VICTORY_POINTS_10765:0 "Hermosillo"
- VICTORY_POINTS_4977:0 "Ciudad Obregón"
- VICTORY_POINTS_2060:0 "Nuevo Laredo"
- VICTORY_POINTS_12811:0 "Piedras Negras"
- VICTORY_POINTS_10730:0 "Acapulco"
- VICTORY_POINTS_10172:0 "Aguascalientes"
- VICTORY_POINTS_4887:0 "Morelia"
- VICTORY_POINTS_8032:0 "Manzanillo"
- VICTORY_POINTS_12746:0 "Puerto Vallarta"
- VICTORY_POINTS_5071:0 "Agua Prieta"
- VICTORY_POINTS_4965:0 "Cancún"
- VICTORY_POINTS_6526:0 "Truro"
- VICTORY_POINTS_4989:0 "Banjul"
- VICTORY_POINTS_12891:0 "Bissau"
- VICTORY_POINTS_1909:0 "Conakry"
- VICTORY_POINTS_10803:1 "Abidjan"
- VICTORY_POINTS_4927:0 "Bamako"
- VICTORY_POINTS_10836:0 "Ouagadougou"
- VICTORY_POINTS_2056:0 "Niamey"
- VICTORY_POINTS_1951:0 "Lome"
- VICTORY_POINTS_10919:0 "Porto Novo"
- VICTORY_POINTS_2080:0 "Yaoundé"
- VICTORY_POINTS_1903:0 "Malabo"
- VICTORY_POINTS_2081:0 "N'Djamena"
- VICTORY_POINTS_12830:0 "Bangui"
- VICTORY_POINTS_8214:0 "Gaborone"
- VICTORY_POINTS_5199:0 "Lusaka"
- VICTORY_POINTS_12986:0 "Lilongwe"
- VICTORY_POINTS_2220:0 "Bujumbura"
- VICTORY_POINTS_9962:0 "Kigali"
- VICTORY_POINTS_12989:0 "Kampala"
- VICTORY_POINTS_1939:0 "Nairobi"
- VICTORY_POINTS_8124:0 "Djibouti"
- VICTORY_POINTS_2077:0 "Belize City"
- VICTORY_POINTS_12304:0 "Kingston"
- VICTORY_POINTS_10254:0 "Nassau"
- VICTORY_POINTS_9377:0 "Pointe-à-Pitre"
- VICTORY_POINTS_3284:0 "Port of Spain"
- VICTORY_POINTS_10906:0 "Paramaribo"
- VICTORY_POINTS_4982:0 "Georgetown"
- VICTORY_POINTS_8051:0 "Doha"
- VICTORY_POINTS_1384:0 "Dushanbe"
- VICTORY_POINTS_12333:0 "Ashgabat"
- VICTORY_POINTS_12583:0 "Bishkek"
- VICTORY_POINTS_3707:1 "Chisinău"
- VICTORY_POINTS_5128:0 "Antananarivo"
- VICTORY_POINTS_11984:0 "Nicosia"
- VICTORY_POINTS_13215:0 "Mexicali"
- VICTORY_POINTS_6241:0 "Utrecht"
- VICTORY_POINTS_9335:0 "Groningen"
- VICTORY_POINTS_6336:0 "Leeuwarden"
- VICTORY_POINTS_9363:0 "Arnhem"
- VICTORY_POINTS_3262:0 "Breda"
- VICTORY_POINTS_11562:0 "Maastricht"
- VICTORY_POINTS_13068:0 "Leuven"
- VICTORY_POINTS_3576:0 "Kortrijk"
- VICTORY_POINTS_9536:0 "Charleroi"
- VICTORY_POINTS_5034:0 "Nouakchott"
- VICTORY_POINTS_8038:0 "Laayoune"
- VICTORY_POINTS_11350:0 "Bridgetown"
- VICTORY_POINTS_4967:0 "Malé"
- VICTORY_POINTS_9315:0 "Sheffield"
- VICTORY_POINTS_153:0 "Willemstad"
- VICTORY_POINTS_7376:0 "Phnom Penh"
- VICTORY_POINTS_1464:0 "Vientiane"
+ VICTORY_POINTS_4333:0 "아스타나"
+ VICTORY_POINTS_11752:0 "장베이"
+ VICTORY_POINTS_7418:0 "시안"
+ VICTORY_POINTS_4879:0 "빈트후크"
+ VICTORY_POINTS_10412:0 "리치먼드"
+ VICTORY_POINTS_12715:0 "메리다"
+ VICTORY_POINTS_4904:0 "캄페체"
+ VICTORY_POINTS_1900:0 "툭스틀라 구티에레스"
+ VICTORY_POINTS_12461:0 "티후아나"
+ VICTORY_POINTS_10769:0 "레이노사"
+ VICTORY_POINTS_5015:0 "마타모로스"
+ VICTORY_POINTS_10889:0 "코아트사코알코스"
+ VICTORY_POINTS_2021:0 "비야에르모사"
+ VICTORY_POINTS_8089:0 "푸에블라"
+ VICTORY_POINTS_8097:0 "후아레스"
+ VICTORY_POINTS_2008:0 "레온"
+ VICTORY_POINTS_7921:0 "두랑고"
+ VICTORY_POINTS_8057:0 "쿨리아칸"
+ VICTORY_POINTS_10895:0 "마사틀란"
+ VICTORY_POINTS_12736:0 "라파스"
+ VICTORY_POINTS_10830:0 "치와와"
+ VICTORY_POINTS_1892:0 "엔세나다"
+ VICTORY_POINTS_4908:0 "과이마스"
+ VICTORY_POINTS_10765:0 "에르모시요"
+ VICTORY_POINTS_4977:0 "시우다드오브레곤"
+ VICTORY_POINTS_2060:0 "누에보라레도"
+ VICTORY_POINTS_12811:0 "피에드라스네그라스"
+ VICTORY_POINTS_10730:0 "아카풀코"
+ VICTORY_POINTS_10172:0 "아과스칼리엔테스"
+ VICTORY_POINTS_4887:0 "모렐리아"
+ VICTORY_POINTS_8032:0 "만사니요"
+ VICTORY_POINTS_12746:0 "푸에르토바야르타"
+ VICTORY_POINTS_5071:0 "아과프리에타"
+ VICTORY_POINTS_4965:0 "칸쿤"
+ VICTORY_POINTS_6526:0 "트루로"
+ VICTORY_POINTS_4989:0 "반줄"
+ VICTORY_POINTS_12891:0 "비사우"
+ VICTORY_POINTS_1909:0 "코나크리"
+ VICTORY_POINTS_10803:1 "아비장"
+ VICTORY_POINTS_4927:0 "바마코"
+ VICTORY_POINTS_10836:0 "와가두구"
+ VICTORY_POINTS_2056:0 "니아메"
+ VICTORY_POINTS_1951:0 "로메"
+ VICTORY_POINTS_10919:0 "포르토노보"
+ VICTORY_POINTS_2080:0 "야운데"
+ VICTORY_POINTS_1903:0 "말라보"
+ VICTORY_POINTS_2081:0 "은자메나"
+ VICTORY_POINTS_12830:0 "방기"
+ VICTORY_POINTS_8214:0 "가보로네"
+ VICTORY_POINTS_5199:0 "루사카"
+ VICTORY_POINTS_12986:0 "릴롱궤"
+ VICTORY_POINTS_2220:0 "부줌부라"
+ VICTORY_POINTS_9962:0 "키갈리"
+ VICTORY_POINTS_12989:0 "캄팔라"
+ VICTORY_POINTS_1939:0 "나이로비"
+ VICTORY_POINTS_8124:0 "지부티"
+ VICTORY_POINTS_2077:0 "벨리즈시티"
+ VICTORY_POINTS_12304:0 "킹스턴"
+ VICTORY_POINTS_10254:0 "나소"
+ VICTORY_POINTS_9377:0 "푸앵트아피트르"
+ VICTORY_POINTS_3284:0 "포트오브스페인"
+ VICTORY_POINTS_10906:0 "파라마리보"
+ VICTORY_POINTS_4982:0 "조지타운"
+ VICTORY_POINTS_8051:0 "도하"
+ VICTORY_POINTS_1384:0 "두샨베"
+ VICTORY_POINTS_12333:0 "아슈가바트"
+ VICTORY_POINTS_12583:0 "비슈케크"
+ VICTORY_POINTS_3707:1 "키시너우"
+ VICTORY_POINTS_5128:0 "안타나나리보"
+ VICTORY_POINTS_11984:0 "니코시아"
+ VICTORY_POINTS_13215:0 "메히칼리"
+ VICTORY_POINTS_6241:0 "위트레흐트"
+ VICTORY_POINTS_9335:0 "흐로닝언 "
+ VICTORY_POINTS_6336:0 "레이우아르던"
+ VICTORY_POINTS_9363:0 "아른험"
+ VICTORY_POINTS_3262:0 "브러다"
+ VICTORY_POINTS_11562:0 "마스트리흐트"
+ VICTORY_POINTS_13068:0 "뢰번"
+ VICTORY_POINTS_3576:0 "코르트레이크"
+ VICTORY_POINTS_9536:0 "샤를루아"
+ VICTORY_POINTS_5034:0 "누악쇼트"
+ VICTORY_POINTS_8038:0 "라윤"
+ VICTORY_POINTS_11350:0 "브리지타운"
+ VICTORY_POINTS_4967:0 "말레"
+ VICTORY_POINTS_9315:0 "셰필드"
+ VICTORY_POINTS_153:0 "빌렘스타트"
+ VICTORY_POINTS_7376:0 "프놈펜"
+ VICTORY_POINTS_1464:0 "비엔티안"
  VICTORY_POINTS_6464:0 "카토비체"
- VICTORY_POINTS_11467:0 "글라이비츠"
+ VICTORY_POINTS_11467:0 "글리비체"
  VICTORY_POINTS_9511:0 "오펠른"
- VICTORY_POINTS_552:0 "Liegnitz"
- VICTORY_POINTS_3545:0 "Waldenburg"
- VICTORY_POINTS_11430:0 "Kielce"
- VICTORY_POINTS_3458:0 "Radom"
- VICTORY_POINTS_562:0 "Ostrowiec"
- VICTORY_POINTS_3230:0 "Płock"
- VICTORY_POINTS_6375:0 "알레슈타인"
- VICTORY_POINTS_11386:0 "Lyck"
- VICTORY_POINTS_3254:0 "Suwałki"
- VICTORY_POINTS_11301:0 "Białystok"
- VICTORY_POINTS_560:0 "Pińsk"
- VICTORY_POINTS_11411:0 "Stanisławów"
- VICTORY_POINTS_6483:0 "Drohobych"
- VICTORY_POINTS_3483:0 "Tarnopol"
- VICTORY_POINTS_513:0 "Kowel"
- VICTORY_POINTS_572:0 "Łuck"
- VICTORY_POINTS_6557:0 "Równe"
- VICTORY_POINTS_11399:0 "Lublin"
- VICTORY_POINTS_9544:0 "Biała Podlaska"
- VICTORY_POINTS_402:0 "Siedlce"
- VICTORY_POINTS_442:0 "Tarnów"
+ VICTORY_POINTS_552:0 "리그니츠"
+ VICTORY_POINTS_3545:0 "발덴부르크"
+ VICTORY_POINTS_11430:0 "키엘체"
+ VICTORY_POINTS_3458:0 "라돔"
+ VICTORY_POINTS_562:0 "오스트로비에츠"
+ VICTORY_POINTS_3230:0 "프워츠크"
+ VICTORY_POINTS_6375:0 "올슈틴"
+ VICTORY_POINTS_11386:0 "리크"
+ VICTORY_POINTS_3254:0 "수바우키"
+ VICTORY_POINTS_11301:0 "비아위스토크"
+ VICTORY_POINTS_560:0 "핀스크"
+ VICTORY_POINTS_11411:0 "스타니스와부프"
+ VICTORY_POINTS_6483:0 "드로호비치"
+ VICTORY_POINTS_3483:0 "타르노폴"
+ VICTORY_POINTS_513:0 "코벨"
+ VICTORY_POINTS_572:0 "우츠크"
+ VICTORY_POINTS_6557:0 "루브네"
+ VICTORY_POINTS_11399:0 "루블린"
+ VICTORY_POINTS_9544:0 "비아와포들라스카"
+ VICTORY_POINTS_402:0 "시에들체"
+ VICTORY_POINTS_442:0 "타르누프"
  VICTORY_POINTS_3295:0 "토룬"
- VICTORY_POINTS_279:1 "Bydgoszcz"
- VICTORY_POINTS_6314:0 "Palanga"
- VICTORY_POINTS_9262:0 "Liepāja"
- VICTORY_POINTS_9289:0 "Mogilev"
- VICTORY_POINTS_3350:0 "Bobruysk"
- VICTORY_POINTS_11313:0 "Salihorsk"
- VICTORY_POINTS_9304:0 "Baranowicze"
- VICTORY_POINTS_6593:0 "Zhytomyr"
- VICTORY_POINTS_3457:0 "Khmelnytskyi"
- VICTORY_POINTS_476:0 "Vinnytsia"
- VICTORY_POINTS_488:0 "Cherkasy"
- VICTORY_POINTS_11683:0 "Mykolaiv"
- VICTORY_POINTS_11504:0 "Poltava"
- VICTORY_POINTS_3520:0 "Sumy"
- VICTORY_POINTS_9566:0 "Shostka"
- VICTORY_POINTS_9449:0 "Belgorod"
- VICTORY_POINTS_3568:0 "Chernigov"
- VICTORY_POINTS_11597:0 "Dobrich"
- VICTORY_POINTS_577:0 "Chernivtsi"
- VICTORY_POINTS_3548:0 "Mukačevo"
- VICTORY_POINTS_11539:0 "Žilina"
- VICTORY_POINTS_3583:0 "Ostrava"
- VICTORY_POINTS_6562:0 "Olomouc"
- VICTORY_POINTS_9569:0 "Tábor"
- VICTORY_POINTS_9541:0 "Budweis"
- VICTORY_POINTS_3585:0 "Carlsbad"
- VICTORY_POINTS_11432:0 "Aussig"
- VICTORY_POINTS_11401:0 "Liberec"
+ VICTORY_POINTS_279:1 "비드고슈치"
+ VICTORY_POINTS_6314:0 "팔랑가"
+ VICTORY_POINTS_9262:0 "리예파야"
+ VICTORY_POINTS_9289:0 "마힐료우"
+ VICTORY_POINTS_3350:0 "바브루이스크"
+ VICTORY_POINTS_11313:0 "살리호르스크"
+ VICTORY_POINTS_9304:0 "바라나비치"
+ VICTORY_POINTS_6593:0 "지토미르"
+ VICTORY_POINTS_3457:0 "흐멜니츠키"
+ VICTORY_POINTS_476:0 "빈니차"
+ VICTORY_POINTS_488:0 "체르카시"
+ VICTORY_POINTS_11683:0 "미콜라이우"
+ VICTORY_POINTS_11504:0 "폴타바"
+ VICTORY_POINTS_3520:0 "수미"
+ VICTORY_POINTS_9566:0 "쇼스타카"
+ VICTORY_POINTS_9449:0 "벨고로드"
+ VICTORY_POINTS_3568:0 "체르니히우"
+ VICTORY_POINTS_11597:0 "도브리치"
+ VICTORY_POINTS_577:0 "체르니우치"
+ VICTORY_POINTS_3548:0 "무카체보"
+ VICTORY_POINTS_11539:0 "질리나"
+ VICTORY_POINTS_3583:0 "오스트라바"
+ VICTORY_POINTS_6562:0 "올로모우츠"
+ VICTORY_POINTS_9569:0 "타보르"
+ VICTORY_POINTS_9541:0 "부트바이스"
+ VICTORY_POINTS_3585:0 "칼즈배드"
+ VICTORY_POINTS_11432:0 "아우시히"
+ VICTORY_POINTS_11401:0 "리베레츠"
  VICTORY_POINTS_3473:0 "퀴스트린"
  VICTORY_POINTS_9388:0 "슈트랄준트"
  VICTORY_POINTS_11305:0 "뤼베크"
- VICTORY_POINTS_11372:0 "쾨슐린"
- VICTORY_POINTS_9606:0 "Timisoara"
- VICTORY_POINTS_619:0 "Novi Sad"
- VICTORY_POINTS_6983:0 "Banja Luka"
- VICTORY_POINTS_564:0 "Kassel"
- VICTORY_POINTS_425:0 "Weimar"
+ VICTORY_POINTS_11372:0 "쾨즐린"
+ VICTORY_POINTS_9606:0 "티미쇼아라"
+ VICTORY_POINTS_619:0 "노비사드"
+ VICTORY_POINTS_6983:0 "바냐루카"
+ VICTORY_POINTS_564:0 "카셀"
+ VICTORY_POINTS_425:0 "바이마르"
  VICTORY_POINTS_11360:0 "엠덴"
  VICTORY_POINTS_11388:0 "뮌스터"
  VICTORY_POINTS_9509:0 "함"
  VICTORY_POINTS_3423:0 "코블렌츠"
  VICTORY_POINTS_3299:0 "레겐스부르크"
- VICTORY_POINTS_13226:0 "Inglostadt"
+ VICTORY_POINTS_13226:0 "잉골슈타트"
  VICTORY_POINTS_9575:0 "자르브뤼켄"
  VICTORY_POINTS_549:0 "아그노"
  VICTORY_POINTS_6529:0 "콜마르"
@@ -908,23 +908,23 @@
  VICTORY_POINTS_7005:0 "가베스"
  VICTORY_POINTS_3560:0 "스당"
  VICTORY_POINTS_3488:0 "말메디"
- VICTORY_POINTS_9890:0 "Prishtina"
- VICTORY_POINTS_9938:0 "Shantou"
- VICTORY_POINTS_7108:0 "Dongguan"
- VICTORY_POINTS_1162:0 "Heyuan"
- VICTORY_POINTS_1055:0 "Wenzhou"
- VICTORY_POINTS_4023:0 "Beihai"
- VICTORY_POINTS_10004:0 "Fangchenggang"
- VICTORY_POINTS_11928:0 "Nantong"
- VICTORY_POINTS_3530:0 "Karlsruhe"
- VICTORY_POINTS_6568:0 "Mannheim"
+ VICTORY_POINTS_9890:0 "프리슈티나"
+ VICTORY_POINTS_9938:0 "산터우"
+ VICTORY_POINTS_7108:0 "둥관"
+ VICTORY_POINTS_1162:0 "허위안"
+ VICTORY_POINTS_1055:0 "원저우"
+ VICTORY_POINTS_4023:0 "베이하이"
+ VICTORY_POINTS_10004:0 "팡청강"
+ VICTORY_POINTS_11928:0 "난퉁"
+ VICTORY_POINTS_3530:0 "카를스루에"
+ VICTORY_POINTS_6568:0 "만하임"
  VICTORY_POINTS_3295:0 "토른"
  VICTORY_POINTS_243:0 "브롬베르크"
- VICTORY_POINTS_1153:0 "Jingdezhen"
- VICTORY_POINTS_11918:0 "Chenzhou"
- VICTORY_POINTS_12414:0 "Enshi"
- VICTORY_POINTS_12017:0 "Huaihua"
- VICTORY_POINTS_10472:0 "Ardahan"
+ VICTORY_POINTS_1153:0 "징더전"
+ VICTORY_POINTS_11918:0 "천저우"
+ VICTORY_POINTS_12414:0 "언스"
+ VICTORY_POINTS_12017:0 "화이화"
+ VICTORY_POINTS_10472:0 "아르다한"
  VICTORY_POINTS_1208:0 "쿠칭"
  VICTORY_POINTS_726:0 "레온"
  VICTORY_POINTS_3933:0 "팜플로나"
