--- a/localisation/wtt_decisions_l_english.yml
+++ b/localisation/wtt_decisions_l_english.yml
@@ -529,7 +529,7 @@
  JAP_tora_tora_tora:0 "도라\! 도라\! 도라\!"
  JAP_tora_tora_tora_desc:0 "첫 번째 일격이 기다리고 있습니다. 그 후에 우리는 우리가 획득한 추진력을 이용해 신속하게 타격해서 적들이 무슨 일이 있었는지 알기도 전에 무력화시켜야 합니다."
  JAP_war_with_soviet_union:0 "소비에트 연방에 선전 포고"
- JAP_war_with_soviet_union_desc:0 "유럽의 우리 동맹국들이 소비에트 연방과 불가침 조약을 체결했습니다. 어찌됐든 우리의 전쟁은 더 기다릴 수 없습니다. 동맹국들과 멀어지는 위험을 감수해서라도, 공산주의자와의 분쟁을 일방적으로 밀어붙여야만 합니다."
+ JAP_war_with_soviet_union_desc:0 "유럽의 우리 동맹국들이 소비에트 연방과 불가침조약을 체결했습니다. 어찌됐든 우리의 전쟁은 더 기다릴 수 없습니다. 동맹국들과 멀어지는 위험을 감수해서라도, 공산주의자와의 분쟁을 일방적으로 밀어붙여야만 합니다."
  prospect_for_resources:1 "자원 전망"
  prospect_for_resources_desc:0 "지질학자들이 우리 영토 안에서 자원 매장지일 가능성이 있는 여러 장소를 발견했습니다. 이곳들을 개발하도록 약간의 자본을 투자할 수 있습니다. 채굴 기술이 진보하면 분명 더 많은 매장지에서 채광을 할 수 있을 것입니다."
  economy_decisions:0 "경제 정책"
@@ -621,10 +621,10 @@
  develop_daqing_deposits_2:0 "다칭 유전 확충"
  expand_eregli_steel_works:0 "에레일리 제철소 확충"
  develop_liaotung_iron_ore_deposits:0 "랴오둥 철광석 매장지 개발"
- move_leningrad_aluminium_plant:0 "레닌그라드 알루미늄 공장 대피"
- develop_leningrad_aluminium_deposits:0 "레닌그라드 알루미늄 공장 확충"
+ move_leningrad_aluminium_plant:0 "페트로그라드 알루미늄 공장 대피"
+ develop_leningrad_aluminium_deposits:0 "페트로그라드 알루미늄 공장 확충"
  develop_kamensk_aluminium_deposits:0 "카멘스크 알루미늄 공장 확충"
- develop_stalingrad_aluminium_deposits:0 "스탈린그라드 알루미늄 공장 확충"
+ develop_stalingrad_aluminium_deposits:0 "차리친 알루미늄 공장 확충"
  develop_cornwall_tungsten_deposits_1:0 "드레이크랜즈 텅스텐 광산 개발"
  develop_cornwall_tungsten_deposits_2:0 "드레이크랜즈 텅스텐 광산 확충"
  develop_caucasus_tungsten_deposits_1:0 "카프카스 텅스텐 광산 개발"
