--- a/localisation/britain_events_l_english.yml
+++ b/localisation/britain_events_l_english.yml
@@ -29,14 +29,14 @@
  britain.1008.t:0 "Germany Declines our Treaty"
  britain.1008.d:0 "Germans will not accept our proposition, they do not want to cooperate with us, we shall not rely on them."
  britain.1008.a:0 "We cannot trust Germans."
- britain.1010.t:0 "King George V Dies"
- britain.1010.d:0 "His Majesty, George V, King of United Kingdom and the British Dominions and Emperor of India has passed away. His quiet calm and devotion to his subjects saw the Empire through both the Great War and the Great Depression. His son will assume the mantle as King Edward VIII, but there are already concerns that he will be too independent of thought. Stanley Baldwin and Neville Chamberlain are preparing to ensure that he will accept direction from the Prime Minister and the Cabinet."
- britain.1010.b:0 "May He Rest in Peace"
- britain.1010.a:0 "May He Rest in Peace"
- britain.1011.t:0 "King Edward VIII Abdicates"
- britain.1011.d:0 "Prime Minister Baldwin has made it quite clear that the dignity of the King-Emperor will be impinged if he were to marry not just a commoner, but also a divorcee and if that was not bad enough, an American. After much soul searching his majesty has chosen love over duty and has chosen to abdicate. His younger brother, Albert, will assume the mantle as King George VI. London bookmakers are already taking odds on whether this shy man will make it to his own coronation."
- britain.1011.b:0 "God Save King George VI"
- britain.1011.a:0 "Interesting"
+ britain.1010.t:0 "조지 5세의 서거"
+ britain.1010.d:0 "영국 국왕이자 영국령 인도의 황제, 조지 5세가 세상을 떠났습니다. 그의 조용한 침착함과 신하들에 대한 헌신은 대전과 대공황을 통해 제국을 보았습니다. 그의 아들은 에드워드 8세로 즉위하게 될 것이지만, 이미 그의 생각이 너무 독립적이라는 것이라는 우려가 있습니다. 스탠리 볼드윈과 네빌 체임벌린은 총리와 내각의 지시를 받아들일 수 있도록 준비하고 있습니다."
+ britain.1010.b:0 "삼가 고인의 명복을 빕니다."
+ britain.1010.a:0 "삼가 고인의 명복을 빕니다."
+ britain.1011.t:0 "에드워드 8세의 퇴위"
+ britain.1011.d:0 "볼드윈 수상은 만약 에드워드 8세가 평민일뿐만 아니라 이혼녀이며, 미국인인 여자와 결혼한다면 품위가 손상될 것이라는 것을 분명히 했습니다. 그는 깊은 고민 끝에 의무보다 사랑을 선택했고 퇴위하는 것을 선택했습니다. 그의 동생 알버트는 조지 6세로서 왕으로 취임할 것입니다. 런던 마권업자들은 이미 이 수줍은 남자가 자신의 대관식에 갈 수 있을지에 대해 이의를 제기하고 있습니다."
+ britain.1011.b:0 "조지 6세 국왕 폐하 만세!"
+ britain.1011.a:0 "흥미롭군"
  britain.1013.t:0 "1936 Strike"
  britain.1013.d:0 "We thought that the great strike of 1926 was long forgotten but on its 10-year anniversary workers all around the Great Britain stand once more against the King and our conservative government.\nThey want peace, bread and rights for all men and women. We have 3 options;\nPromise them changes but do nothing in the hopes that strike will end soon enough. Our second option is to partially agree to their demands and sacrifice our production and industrial capacity. Lastly we can fully agree to their demands and reduce work-hours for all factory works. This however might spark more support for the left-wing government."
  britain.1013.a:0 "Promise them changes, do nothing"
