--- a/localisation/fra_events_l_english.yml
+++ b/localisation/fra_events_l_english.yml
@@ -1,79 +1,79 @@
 ﻿l_english:
   france.1000.t:0 "합병이냐 전쟁이냐!"
-  france.1000.d:0 "프랑스 제국은 우리에게 그들의 제국에 합병되거나 전쟁에 직면하라는 최후 통첩을 보냈다. 만약 우리가 거부한다면, 우리가 동맹에 가입하지 않는 한 그것은 우리의 완전한 파멸을 초래할 것이다..."
+  france.1000.d:0 "프랑스 제국은 우리에게 그들의 제국에 합병되거나 전쟁에 직면하라는 최후 통첩을 보냈습니다. 만약 우리가 거부한다면, 우리가 동맹에 가입하지 않는 한 그것은 우리의 완전한 파멸을 초래할 것입니다..."
   france.1000.a:0 "우리는 선택의 여지가 없다..."
   france.1000.b:0 "벨기에는 살아갈 것이다!"
   france.1002.t:0 "벨기에가 굴복하다"
-  france.1002.d:0 "벨기에는 현명하게도 우리 제국에 통합되는 것을 선택했다. 룩셈부르크도 그들과 함께 할 것이다."
+  france.1002.d:0 "벨기에는 현명하게도 우리 제국에 통합되는 것을 선택했습니다. 룩셈부르크도 그들과 함께 할 것입니다."
   france.1002.a:0 "훌륭해."
   france.1003.t:0 "벨기에가 거부하다"
-  france.1003.d:0 "어리석은 벨기에 정부는 우리의 최후통첩을 무시하기로 결정했다. 우리는 군대를 동원해야 한다. 우리는 유럽의 웃음거리가 되지 않을 것이다."
+  france.1003.d:0 "어리석은 벨기에 정부는 우리의 최후통첩을 무시하기로 결정했습니다. 우리는 군대를 동원해야 합니다. 우리는 유럽의 웃음거리가 되지 않을 것입니다."
   france.1003.a:0 "벨기에인의 삶은 중요하지 않다!"  
   france.1004.t:0 "로망디냐 전쟁이냐!"
-  france.1004.d:0 "프랑스 제국은 최근 프랑스의 국민들과 스위스의 프랑스인들을 연결하려는 야망을 표명했다. 만일 우리가 거절한다면, 중립이 시작된 이후 우리가 준비해온 전쟁이 일어날 수도 있다. 반면에 프랑스는 매우 강력하다."
+  france.1004.d:0 "프랑스 제국은 최근 프랑스의 국민들과 스위스의 프랑스인들을 연결하려는 야망을 표명했습니다. 만일 우리가 거절한다면, 중립이 시작된 이후 우리가 준비해온 전쟁이 일어날 수도 있습니다. 반면에 프랑스는 매우 강력합니다."
   france.1004.a:0 "어쨌든 로만디는 그렇게 가치가 없었다."
   france.1004.b:0 "우리는 이것을 위해 1세기 이상 준비했다! 전쟁을 위하여!" 
   france.1005.t:0 "스위스가 굴복하다"
-  france.1005.d:0 "스위스는 현명하게 정당한 프랑스 땅인 로망디를 주었다. 지역의 통합은 즉시 시작되어야 한다."
+  france.1005.d:0 "스위스는 현명하게 정당한 프랑스 땅인 로망디를 주었습니다. 지역의 통합은 즉시 시작되어야 합니다."
   france.1005.a:0 "훌륭해."
   france.1006.t:0 "스위스가 거부하다"
-  france.1006.d:0 "스위스는 정당한 프랑스 땅인 로망디를 우리의 통제 하로 돌려주려 하지 않으려 우리에게 반항했다. 이 중립적인 바보들에게 교훈을 줘야 할 때이다."
+  france.1006.d:0 "스위스는 정당한 프랑스 땅인 로망디를 우리의 통제 하로 돌려주려 하지 않으려 우리에게 반항했습니다. 이 중립적인 바보들에게 교훈을 줘야 할 때입니다."
   france.1006.a:0 "헬베티아 공화국은 복구될 것이다!"
   france.1010.t:0 "알베르 사라우트가 사직하다"
-  france.1010.d:0 "우리의 알베르 사라우트 총리는 즉시 사임할 것이라고 발표했다. 에두아르 달라디에 신임 급진당 당수는 차기 총리가 될 것이다. 달라디에는 즉시 국민들이 우리 정부에서 올바른 대표성을 갖도록 하기 위해 조기 선거를 소집했다."
+  france.1010.d:0 "우리의 알베르 사라우트 총리는 즉시 사임할 것이라고 발표했다. 에두아르 달라디에 신임 급진당 당수는 차기 총리가 될 것입니다. 달라디에는 즉시 국민들이 우리 정부에서 올바른 대표성을 갖도록 하기 위해 조기 선거를 소집했습니다."
   france.1010.a:0 "우리는 사라우트씨가 멋진 은퇴를 하기를 바란다."  
   france.1007.t:0 "바이에른이 자를란트를 요구하다"
-  france.1007.d:0 "독일의 공산주의 정부인 바이에른은 군대를 동원하였다. 그들은 독일 내전이 발발했을 때 우리가 접수했던 사를란드를 되찾기를 원한다. 이런 침략 행위에 대해 우리는 어떻게 대응해야 하는가?"
+  france.1007.d:0 "독일의 공산주의 정부인 바이에른은 군대를 동원하였다. 그들은 독일 내전이 발발했을 때 우리가 접수했던 자를란트를 되찾기를 원합니다. 이런 침략 행위에 대해 우리는 어떻게 대응해야 합니까?"
   france.1007.a:0 "마침내, 그 문제투성이의 땅을 없애는 방법일 것이다!"
   france.1007.b:0 "이 땅은 프랑스 땅이고, 프랑스 땅으로 남을 것이다! 전쟁을 위하여!"
   france.1008.t:0 "프랑스가 자를란트를 반환하다"
-  france.1008.d:0 "프랑스는 우리에게 자를란트를 반환하기로 결정했다. 그들의 군대가 그 지역을 철수했고 우리 군대는 그 지역을 향해 이동하고 있다."
+  france.1008.d:0 "프랑스는 우리에게 자를란트를 반환하기로 결정했습니다. 그들의 군대가 그 지역을 철수했고 우리 군대는 그 지역을 향해 이동하고 있습니다."
   france.1008.a:0 "오늘은 독일에게 역사적인 날이다."
   france.1009.t:0 "프랑스가 거부하다"
-  france.1009.d:0 "저주받은 프랑스 정부는 사를란드를 돌려주지 않기로 결정했는데, 이것은 우리가 그들과 전쟁을 벌일 수 있는 명분이다.  우리는 이 전쟁을 통해 프랑스로부터 알사스와 같은 다른 지역을 추가로 얻을 수 있습니다."
+  france.1009.d:0 "저주받은 프랑스 정부는 자를란트를 돌려주지 않기로 결정했는데, 이것은 우리가 그들과 전쟁을 벌일 수 있는 명분입니다.  우리는 이 전쟁을 통해 프랑스로부터 알사스와 같은 다른 지역을 추가로 얻을 수 있습니다."
   france.1009.a:0 "프랑스에게 죽음을!"
   france.1011.a:0 "프랑스-독일 영토 교환"
-  france.1011.d:0 "이제 독일이 서부 연합에 가입했으니, 우리 장관들은 자를란트를 독일로 다시 이양해야 옳다는 입장이다. 이렇게 되면 이 지역의 민족적 긴장도 해소될 뿐만 아니라 독일과의 관계도 개선될 것이다."
+  france.1011.d:0 "이제 독일이 서부 연합에 가입했으니, 우리 장관들은 자를란트를 독일로 다시 이양해야 옳다는 입장입니다. 이렇게 되면 이 지역의 민족적 긴장도 해소될 뿐만 아니라 독일과의 관계도 개선될 것입니다."
   france.1011.a:0 "유럽 협력의 새로운 시대를 위하여!"
   france.1011.b:0 "다시 생각해 보니... 우리는 자를란트를 계속 가져야 한다."
   france.1012.t:0 "프랑스가 자를란트를 양도하다"
-  france.1012.d:0 "우리의 서부 연합 가입 결정은 결실을 맺었다. 프랑스가 자를란드를 독일로 다시 이양하기로 결정함으로써, 자를란트는 마침내 독일 동포들과 함께 독일로 돌아왔다! 우리는 옛 프랑스 영토의 재통합을 진행할 것이다."
+  france.1012.d:0 "우리의 서부 연합 가입 결정은 결실을 맺었습니다. 프랑스가 자를란드를 독일로 다시 이양하기로 결정함으로써, 자를란트는 마침내 독일 동포들과 함께 독일로 돌아왔습니다! 우리는 옛 프랑스 영토의 재통합을 진행할 것입니다."
   france.1012.a:0 "오늘은 독일에게 역사적인 날이다."
   france.1013.t:0 "프랑스 조기 선거"
-  france.1013.d:0 "우리 총리가 요청한 선거가 드디어 왔다. 4명의 주역이 나타났고, 1명이 승자가 될 것이다. 투표가 집계되고 있고..."
+  france.1013.d:0 "우리 총리가 요청한 선거가 드디어 열렸습니다. 4명의 주역이 나타났고, 1명이 승자가 될 것입니다. 투표가 집계되고 있고..."
   france.1013.a:0 "블룸은 급진당 반체제 인사들 덕분에 다수표를 얻는다!"
   france.1013.b:0 "달라디에는 권력을 유지한다!"
-  france.1013.c:0 "사회주의자와 공산주의자 유권자가 한마음으로 뭉쳐 토레즈를 선출하다!"
-  france.1013.e:0 "플랑댕은 그의 군주주의적 성향 덕분에 승리했다!"
+  france.1013.c:0 "사회주의자와 공산주의자 유권자가 한마음으로 뭉쳐 토레즈를 선출한다!"
+  france.1013.e:0 "플랑댕은 그의 군주주의적 성향 덕분에 승리한다!"
   france.1014.t:0 "내전이 발발하다!"
-  france.1014.d:0 "지난 주, 우리 정부는 파업 노동자들을 진정시키기 위해 주방위군을 파견하여 그들을 업무에 복귀시키라는 명령을 내렸다. 불행하게도, 주방위군은 명령에 불복종하고 파업 노동자들과 힘을 합쳤는데, 이는 1세기 전의 프랑스 혁명과 비슷한 순간이었다. 비상사태가 선포되었고, 새로운 정부가 우리 정부에 반기를 들었다."
+  france.1014.d:0 "지난 주, 우리 정부는 파업 노동자들을 진정시키기 위해 주방위군을 파견하여 그들을 업무에 복귀시키라는 명령을 내렸습니다. 불행하게도, 주방위군은 명령에 불복종하고 파업 노동자들과 힘을 합쳤는데, 이는 1세기 전의 프랑스 혁명과 비슷한 순간이었습니다. 비상사태가 선포되었고, 새로운 정부가 우리 정부에 반기를 들었습니다."
   france.1014.a:0 "이 공산주의 쓰레기들을 우리 땅에서 치워라!"
-  france.1015.t:0 "자를란트를 장악하나?"
-  france.1015.d:0 "프랑스 내에서 내전이 터졌다! 마침내 우리가 빼앗긴 이 땅을 얻을 수 있기 때문에, 우리는 너무 늦기 전에 이 기회에 행동해야 한다! 이 기회는 간과할 수 없다!"
-  france.1015.a:0 "우리 군대을 파견하여 그 지역 내 주요 기반시설 거점과 기타 정부 건물을 확보하도록 하라."
+  france.1015.t:0 "자를란트를 장악하는가?"
+  france.1015.d:0 "프랑스 내에서 내전이 터졌습니다! 마침내 우리가 빼앗긴 이 땅을 얻을 수 있기 때문에, 우리는 너무 늦기 전에 이 기회에 행동해야 합니다! 이 기회는 간과할 수 없습니다!"
+  france.1015.a:0 "우리 군대를 파견하여 그 지역 내 주요 기반시설 거점과 기타 정부 건물을 확보하도록 하라."
   france.1015.b:0 "프랑스인들은 너무 무서워..."
   france.1016.t:0 "프랑스 내전"
-  france.1016.d:0 "최근 국회의원 선거에 이어 프랑스 공화국 노동자들이 파업에 돌입했다. 프랑스 정부는 파업 중인 근로자들과의 협상을 거부하고 주방위군을 보내 파업을 진압했다. 그들에게 불행하게도, 주방위군은 파업 노동자들과 합류했다. 프랑스 일부 지역에서 모리스 토레즈가 정권을 잡고 있는 가운데 새로운 반역 정부가 선포되었다. 프랑스를 위한 전투가 시작되었다!"
+  france.1016.d:0 "최근 국회의원 선거에 이어 프랑스 공화국 노동자들이 파업에 돌입했습니다. 프랑스 정부는 파업 중인 근로자들과의 협상을 거부하고 주방위군을 보내 파업을 진압했습니다. 그들에게 불행하게도, 주방위군은 파업 노동자들과 합류했습니다. 프랑스 일부 지역에서 모리스 토레즈가 정권을 잡고 있는 가운데 새로운 반역 정부가 선포되었습니다. 프랑스를 위한 전투가 시작되었습니다!"
   france.1016.a:0 "이건 좀 낯익지 않아?"
   france.1016.b:0 "프랑스 만세!
   france.1017.t:0 "파리-페트로그라드 조약 제안"
-  france.1017.d:0 "독일 내에서의 빠른 통일과 긴장이 고조되면서 프랑스인들은 독일의 프랑스 침공을 초래할 수 있는 잠재적으로 위험한 상황에 놓이게 되었다. 따라서 프랑스인들은 독일이 프랑스를 공격할 경우 독일과 2전 전선을 구축하기 위해 우리와의 동맹을 제안했다."
+  france.1017.d:0 "독일 내에서의 빠른 통일과 긴장이 고조되면서 프랑스인들은 독일의 프랑스 침공을 초래할 수 있는 잠재적으로 위험한 상황에 놓이게 되었습니다. 따라서 프랑스인들은 독일이 프랑스를 공격할 경우 독일과 2전 전선을 구축하기 위해 우리와의 동맹을 제안했습니다."
   france.1017.a:0 "뭐가 잘못될 수 있겠어?"
   france.1017.b:0 "우리는 나폴레옹이 우리에게 한 짓을 잊지 않을 것이다."
   france.1018.t:0 "러시아가 수락하다"
-  france.1018.d:0 "우리는 페트로그라드로부터 러시아의 파리-페트로그라드 조약 체결 결정을 확인하는 전보를 받았다. 독일은 양면전선에 직면하게 될 것이기 때문에, 이 조치는 분명히 잠재적인 독일 침공을 저지할 것이다."
+  france.1018.d:0 "우리는 페트로그라드로부터 러시아의 파리-페트로그라드 조약 체결 결정을 확인하는 전보를 받았습니다. 독일은 양면전선에 직면하게 될 것이기 때문에, 이 조치는 분명히 잠재적인 독일 침공을 저지할 것입니다."
   france.1018.a:0 "우리의 새로운 러시아 친구들을 위해 건배!"
   france.1019.t:0 "러시아가 거절하다"
-  france.1019.d:0 "러시아인들은 프랑스-러시아 동맹이 그들의 최선의 이익이 아니라고 결정했다. 이것은 단지 우리가 잠재적 독일 침공을 위해 현재의 동맹국들에게만 의존할 수 있다는 것을 의미한다. 유감스럽게도 다른 곳에서 동맹군을 찾아야 한다."
+  france.1019.d:0 "러시아인들은 프랑스-러시아 동맹이 그들의 최선의 이익이 아니라고 결정했습니다. 이것은 단지 우리가 잠재적 독일 침공을 위해 현재의 동맹국들에게만 의존할 수 있다는 것을 의미합니다. 유감스럽게도 다른 곳에서 동맹군을 찾아야 합니다."
   france.1019.a:0 "오, 저 러시아놈들..."
   france.34.t:0 "원정군이 도착하다!"
-  france.34.d:0 "영국은 다시 한 번 영국 대륙원정군(BEF)를 프랑스 본토에 보내 독일군에 대항하는 우리의 싸움을 돕는다!"
+  france.34.d:0 "영국은 다시 한 번 영국 대륙원정군을 프랑스 본토에 보내 독일군에 대항하는 우리의 싸움을 돕습니다!"
   france.34.a:0 "브리타니아 만세!"
   france.1020.t:0 "식민지에서의 혼란!"
-  france.1020.d:0 "새로운 프랑스 통치 하에서, 우리 식민지들은 그들의 진짜 모습을 보여주었다! 우리가 그들을 가장 필요로 했을 때, 그들은 우리를 떠나기로 결정했고, 우리는 우리의 것을 되찾을 것이다!"
+  france.1020.d:0 "새로운 프랑스 통치 하에서, 우리 식민지들은 그들의 진짜 모습을 보여주었습니다! 우리가 그들을 가장 필요로 했을 때, 그들은 우리를 떠나기로 결정했고, 우리는 우리의 것을 되찾을 것입니다!"
   france.1020.a:0 "우리는 돌아올 것이다!"
   france.1021.t:0 "독립!"
-  france.1021.d:0 "프랑스, 우리의 지배자가 혼란에 빠졌다! 우리의 독립을 선언할 때가 왔다!"
+  france.1021.d:0 "프랑스, 우리의 지배자가 혼란에 빠졌습니다! 우리의 독립을 선언할 때가 왔습니다!"
   france.1021.a:0 "자유다!"
   france.1021.b:0 "우린 충성을 지킬 것이다!"
 
@@ -82,7 +82,7 @@
   fcolony.1.FNA.a:0 ""
   fcolony.1.FNA.b:0 ""
   fcolony.2.t:0 "식민지에서의 반란!"
-  fcolony.2.d:0 "우리 땅에서 일어나는 반란! 우리는 방금 해외의 우리 땅에서 전보를 받았다. 그 지방 민병대는 우체국과 중요한 철도망을 장악했다.\n혁명이 진행 중이다..."
+  fcolony.2.d:0 "우리 땅에서 반란이 터졌습니다! 우리는 방금 해외의 우리 식민지로부터 전보를 받았습니다. 그 지방 민병대는 우체국과 중요한 철도망을 장악했습니다.\n혁명이 진행 중입니다..."
   fcolony.2.a:0 "저런!"
 
  
