--- a/localisation/tur_events_l_english.yml
+++ b/localisation/tur_events_l_english.yml
@@ -1,203 +1,203 @@
 ﻿ l_english:
   ####### DOMESTIC ######
  ottodome.1.t:0 "밀레트가 지즈야를 내도록 강요하는가?"
- ottodome.1.d:0 "딤미 또는 '보호받는 자'는 밀레트와 이슬람교 정복체계의 오래된 부분이다. 그러나 사람들을 보호하기 위해 오스만 제국은 그들에게 제국의 비이슬람 거주자들에게 부과되는 세금인 지즈야를 지불하도록 강요했다. 우리 회원들 중 일부는 이렇게 잔인하고 부당하다고 말하는 반면, 다른 보수주의자들은 비 이슬람 주민들에 대한 지즈야를 요구하고 있다. 어떻게 진행하면 좋을까?"
+ ottodome.1.d:0 "딤미 또는 '보호받는 자'는 밀레트와 이슬람교 정복체계의 오래된 부분입니다. 그러나 사람들을 보호하기 위해 오스만 제국은 그들에게 제국의 비이슬람 거주자들에게 부과되는 세금인 지즈야를 지불하도록 강요했습니다. 우리 회원들 중 일부는 이렇게 잔인하고 부당하다고 말하는 반면, 다른 보수주의자들은 비 이슬람 주민들에 대한 지즈야를 요구하고 있습니다. 어떻게 진행하면 좋겠습니까?"
  ottodome.1.a:0 "훌륭한 제안이다!"
  ottodome.1.b:0 "우리는 무슬림이 아닌 다수 대중을 화나게 할 수 없다."
  ottodome.3.t:0 "콘스탄티노폴리스에서의 봉기!"
- ottodome.3.d:0 "우리는 터키의 러시아 점령지 전역에서 일어난 폭동에 대한 골치 아픈 보고가 있다. 아르메니아 비무장지대에서는 아랍인들과 터키인들이 모두 아르메니아 소수민족을 사냥하고 린치를 가하고 있다. 콘스탄티노폴리스에 있는 러시아군은 교수형에 처해져 보스포루스에 던져지고 정교회 시설들은 불타버렸다."
+ ottodome.3.d:0 "우리는 터키의 러시아 점령지 전역에서 일어난 폭동에 대한 골치 아픈 보고가 있습니다. 아르메니아 비무장지대에서는 아랍인들과 터키인들이 모두 아르메니아 소수민족을 사냥하고 린치를 가하고 있습니다. 콘스탄티노폴리스에 있는 러시아군은 교수형에 처해져 보스포루스에 던져지고 정교회 시설들은 불타버렸습니다."
  ottodome.3.a:0 "후퇴명령을 내려라."
  ottodome.3.b:0 "이것은 용납할 수 없다!"
  ottodome.4.t:0 "수도 천도"
- ottodome.4.d:0 "혁명이 끝난 지금, 많은 사람들이 우리 수도의 문제를 제기하고 있다. 우리에겐 세 가지 선택이 있다.수도를 이스탄불로 옮기고 '콘스탄티니예'로 이름을 바꾸거나, 수도를 앙카라로 옮길 수도 있다. 마지막 선택은 우리의 수도를 이스탄불로 옮기되 새로운 터키식 이름을 남겨두는 것이다. 어떻게 진행하면 좋을까?"
+ ottodome.4.d:0 "혁명이 끝난 지금, 많은 사람들이 우리 수도의 문제를 제기하고 있습니다. 우리에겐 세 가지 선택이 있다.수도를 이스탄불로 옮기고 '콘스탄티니예'로 이름을 바꾸거나, 수도를 앙카라로 옮길 수도 있습니다. 마지막 선택은 우리의 수도를 이스탄불로 옮기되 새로운 터키식 이름을 남겨두는 것입니다. 어떻게 진행하면 좋겠습니까?"
  ottodome.4.a:0 "오랜 옛날부터 그래왔다. (수도 천도 및 이름 변경)"
  ottodome.4.b:0 "앙카라는 터키의 수도다."
  ottodome.4.c:0 "이스탄불은 터키인들의 진정한 수도다. (수도 천도)"
  ####### NEWS ######
  ottodome.99.t:0 "청년 튀르크 반란"
- ottodome.99.d:0 "콘스탄티노플 봉기 혹은 대부분의 사람들이 알고 있듯이, 청년 튀르크 반란은 터키의 러시아 점령지 전역에서 터키와 아랍의 반란자들에 의해 수행되었다. 아르메니아 비무장지대에서의 폭력사태가 증가하자, 많은 사람들이 예레반이나 트빌리시에서 난민을 희망하며 러시아 국경을 넘어 도망쳤다. 콘스탄티노플 정교회에 있는 동안 시민들은 보스포루스 해협에 던져지고 러시아 건물들은 불타버렸다. 러시아의 지도자 차르 니콜라스 2세는 '터키 국민들은 지역 소수민족에 대한 그들의 행동을 후회할 것입니다'라고 발언하였다. 많은 사람들은 이것을 러시아의 개혁과 현대화에 대한 필요성 때문에 공허한 위협으로 인식하고 있다."
+ ottodome.99.d:0 "콘스탄티노플 봉기 혹은 대부분의 사람들이 알고 있듯이, 청년 튀르크 반란은 터키의 러시아 점령지 전역에서 터키와 아랍의 반란자들에 의해 수행되었습니다. 아르메니아 비무장지대에서의 폭력사태가 증가하자, 많은 사람들이 예레반이나 트빌리시에서 난민을 희망하며 러시아 국경을 넘어 도망쳤습니다. 콘스탄티노플 정교회에 있는 동안 시민들은 보스포루스 해협에 던져지고 러시아 건물들은 불타버렸습니다. 러시아의 지도자 차르 니콜라스 2세는 '터키 국민들은 지역 소수민족에 대한 그들의 행동을 후회할 것입니다'라고 발언하였습니다. 많은 사람들은 이것을 러시아의 개혁과 현대화에 대한 필요성 때문에 공허한 위협으로 인식하고 있습니다."
  ottodome.99.a:0 "유럽이 뜨거워지고 있다."
  ottodome.100.t:0 "압뒬메지트 2세가 칼리프로 즉위하다"
- ottodome.100.d:0 "오늘날 터키 정부는 오스만 제국의 30대 칼리프로서 왕위를 되찾기 위해 압뒬메지트 2세를 다시 초빙하였다. 많은 사람들이 압뒬메지트 2세를 온건파이자 예술과 문학의 후원자라고 생각하지만 많은 국가들은 여전히 터키가 초강대국으로 부상하는 것을 두려워하고 있다. 러시아는 아마도 오스만 침략에 대비하기 위해 불가리아나 그리스와 같은 발칸 국가에 손을 뻗치기 시작했을 것이다."
+ ottodome.100.d:0 "오늘날 터키 정부는 오스만 제국의 30대 칼리프로서 왕위를 되찾기 위해 압뒬메지트 2세를 다시 초빙하였습니다. 많은 사람들이 압뒬메지트 2세를 온건파이자 예술과 문학의 후원자라고 생각하지만 많은 국가들은 여전히 터키가 초강대국으로 부상하는 것을 두려워하고 있습니다. 러시아는 아마도 오스만 침략에 대비하기 위해 불가리아나 그리스와 같은 발칸 국가에 손을 뻗치기 시작했을 것입니다."
  ottodome.100.a:0 "압뒬메지트 2세가 온건하기를 바라자...."
  ottodome.101.t:0 "수호위원회를 발족시킨 오스만 제국"
- ottodome.101.d:0 "오늘날 터키 정부는 '수호위원회'라고 불리는 이슬람 전문 학자들의 협의회를 설립했다. 아마도 의회의 임무는 샤리아 법이 제국 전역에 걸쳐 시행되고 시행되도록 하고, 무슬림 이외의 소수민족을 강제로 개종시키는 것이다. 이 지역의 많은 나라들은 오스만 제국의 새로운 화신으로 전쟁을 준비하고 있다."
+ ottodome.101.d:0 "오늘날 터키 정부는 '수호위원회'라고 불리는 이슬람 전문 학자들의 협의회를 설립했습니다. 아마도 의회의 임무는 샤리아 법이 제국 전역에 걸쳐 시행되고 시행되도록 하고, 무슬림 이외의 소수민족을 강제로 개종시키는 것입니다. 이 지역의 많은 나라들은 오스만 제국의 새로운 화신으로 전쟁을 준비하고 있습니다."
  ottodome.101.a:0 "이것은 좋게 끝날 수 없다..."
  ####### CONQUEST ######
  ottoman.1.t:0 "터키가 시리아를 점령하다"
- ottoman.1.d:0 "터키 정부의 지원을 받은 시리아 반군은 시리아의 주요 기관과 라디오 방송국을 모두 점령했다. 그들은 새로 형성된 오스만 제국에 다시 가입하기를 원한다.\n우리는 튀르크인들과 전쟁을 할 여유가 없다. 그들이 원하면 그들의 옛 주인에 다시 합류하게 해야 할 것이다."
+ ottoman.1.d:0 "터키 정부의 지원을 받은 시리아 반군은 시리아의 주요 기관과 라디오 방송국을 모두 점령했습니다. 그들은 새로 형성된 오스만 제국에 다시 가입하기를 원합니다.\n우리는 튀르크인들과 전쟁을 할 여유가 없습니다. 그들이 원하면 그들의 옛 주인에 다시 합류하게 해야 할 것입니다."
  ottoman.1.a:0 "이게 그들이 원하는 것이라면..."
  #ottoman.1.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
  ottoman.2.t:0 "시리아의 재통합"
- ottoman.2.d:0 "우리의 통제하에 우리는 오스만 제국의 시리아 재통합을 완료해야 한다."
+ ottoman.2.d:0 "우리의 통제하에 우리는 오스만 제국의 시리아 재통합을 완료해야 합니다."
  ottoman.2.a:0 "앞으로!"
  ottoman.3.t:0 "시리아 분쟁"
- ottoman.3.d:0 "터키 정부의 지원을 받은 시리아 반군은 시리아의 주요 기관과 라디오 방송국을 모두 점령했다. 그들은 새로 형성된 오스만 제국에 다시 가입하기를 원한다.\n프랑스는 합병에 대한 항의와 공식적인 비난을 발표했지만 아무런 조치도 취하지 않을 것으로 보인다."
+ ottoman.3.d:0 "터키 정부의 지원을 받은 시리아 반군은 시리아의 주요 기관과 라디오 방송국을 모두 점령했습니다. 그들은 새로 형성된 오스만 제국에 다시 가입하기를 원합니다.\n프랑스는 합병에 대한 항의와 공식적인 비난을 발표했지만 아무런 조치도 취하지 않을 것으로 보입니다."
  ottoman.3.a:0 "알았다."
  ottoman.3.b:0 "알았다."
  ottoman.4.t:0 "오스만이 메소포타미아를 요구하다"
- ottoman.4.d:0 "오스만 제국은 이제 문명의 요람인 메소포타미아 쪽으로 방향을 틀었다. 이라크 사람들은 이 땅에 수년간 거주해왔고, 많은 사람들이 이 땅을 포기하려 하지 않는다. 어떻게 진행하면 좋을까."
+ ottoman.4.d:0 "오스만 제국은 이제 문명의 요람인 메소포타미아 쪽으로 방향을 틀었습니다. 이라크 사람들은 이 땅에 수년간 거주해왔고, 많은 사람들이 이 땅을 포기하려 하지 않습니다. 어떻게 진행하면 좋겠습니까."
  ottoman.4.a:0 "오스만은 우리를 새로운 시대로 인도할 것이다."
  ottoman.4.b:0 "우리는 문명의 요람을 안전하게 지켜야 한다!"
- ottoman.5.t:0 "이라크가 굴복하다."
- ottoman.5.d:0 "오늘 우리 군대는 메소포타미아로 진군한다. 오늘은 우리 나라에 영광스러운 날이다."
+ ottoman.5.t:0 "이라크가 굴복하다"
+ ottoman.5.d:0 "오늘 우리 군대는 메소포타미아로 진군합니다. 오늘은 우리 나라에 영광스러운 날입니다."
  ottoman.5.a:0 "승리다!"
  ottoman.6.t:0 "이라크가 요구를 거부하다"
- ottoman.6.d:0 "이라크는 우리의 합병 제안을 거절했다. 그들은 어떤 대가를 치르더라도 메소포타미아를 보호할 준비가 되어 있다."
+ ottoman.6.d:0 "이라크는 우리의 합병 제안을 거절했습니다. 그들은 어떤 대가를 치르더라도 메소포타미아를 보호할 준비가 되어 있습니다."
  ottoman.6.a:0 "우리는 전쟁을 준비해야 한다."
  ottoman.7.t:0 "신성한 땅을 요구하는 오스만족"
- ottoman.7.d:0 "오스만 제국은 지금 우리의 합병을 요구하고 있다. 그들은 예루살렘과 암만의 도시를 바라보고 있다. 어떻게 진행하면 좋을까?"
+ ottoman.7.d:0 "오스만 제국은 지금 우리의 합병을 요구하고 있습니다. 그들은 예루살렘과 암만의 도시를 바라보고 있습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.7.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.7.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
  ottoman.8.t:0 "트란스요르단이 굴복하다"
- ottoman.8.d:0 "약해진 아랍의 트란스요르단 지역이 우리 군대의 힘으로 무너졌다."
+ ottoman.8.d:0 "약해진 아랍의 트란스요르단 지역이 우리 군대의 힘 앞에 무너졌습니다."
  ottoman.8.a:0 "승리다!"
  ottoman.9.t:0 "트란스요르단이 요구를 거부하다"
- ottoman.9.d:0 "시리아 토후국이 우리 요구를 거부했다."
+ ottoman.9.d:0 "시리아 토후국이 우리 요구를 거부했습니다."
  ottoman.9.a:0 "우리는 전쟁을 준비해야 한다."
- ottoman.10.t:0 "The Ottomans Seek To End The Religious Schism"
- ottoman.10.d:0 "The Ottoman Empire has recently reclaimed the title of 'Caliphate' and is looking to unify both Shi'ites and Sunnis. How should we proceed?"
+ ottoman.10.t:0 "오스만인들이 종교적 분열을 종식시키기 위해 노력하다"
+ ottoman.10.d:0 "오스만 제국은 최근 '칼리프이트(칼리프 국가)'라는 칭호를 되찾았고, 시아파와 수니파의 통일을 모색하고 있습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.10.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.10.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.11.t:0 "Persia Folds"
- ottoman.11.d:0 "The Kingdom Of Persia, one that we had failed to conquer so many times has finally fallen into the hands of the Empire."
+ ottoman.11.t:0 "페르시아가 굴복하다"
+ ottoman.11.d:0 "우리가 여러 번이나 정복하지 못했던 페르시아 왕국이 마침내 제국의 손에 넘어왔습니다."
  ottoman.11.a:0 "훌륭해."
  ottoman.12.t:0 "페르시아가 요구를 거부하다"
- ottoman.12.d:0 "The resilient Persians have denied our request for annexation. Looks they want to see the 14th Ottoman-Persia war..."
- ottoman.12.a:0 "Death To The Shah!"
- ottoman.13.t:0 "The Ottomans Look To Retake The Holy Cities."
- ottoman.13.d:0 "Now that the Ottoman Empire has marched down into the Middle East, they are looking to retake the holy cities on the coast of Hejaz and subjugate us. How should we proceed?"
+ ottoman.12.d:0 "회복력이 있는 페르시아인들은 우리의 합병 요청을 거부했습니다. 제14차 오스만-페르시아 전쟁을 보고 싶어 하는 것 같습니다..."
+ ottoman.12.a:0 "샤(Shah)에게 죽음을!"
+ ottoman.13.t:0 "오스만인들이 성스러운 도시를 탈환하려고 하다"
+ ottoman.13.d:0 "이제 오스만 제국이 중동으로 진군했으니, 그들은 헤자즈 해안의 성읍들을 탈환하여 우리를 복속시키려 하고 있습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.13.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.13.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.14.t:0 "Saudi Arabia Folds"
- ottoman.14.d:0 "Today we march into the holy cities and reassert our dominace over the weak desert kingdoms."
- ottoman.14.a:0 "Tonight we feast!"
- ottoman.15.t:0 "Saudi Arabia이(가) 요구를 거부하다"
- ottoman.15.d:0 "The Kingdom Of Saudi Arabia has denied our offer "
+ ottoman.14.t:0 "사우디아라비아가 굴복하다"
+ ottoman.14.d:0 "오늘 우리는 성스러운 도시로 진군하여 약한 사막 왕국들에 대한 지배권을 다시 확고히 합니다."
+ ottoman.14.a:0 "오늘 밤 우리는 잔치를 벌인다!"
+ ottoman.15.t:0 "사우디아라비아가 요구를 거부하다"
+ ottoman.15.d:0 "사우디 아라비아 왕국이 우리 제안을 거부했습니다."
  ottoman.15.a:0 "우리는 전쟁을 준비해야 한다."
  ottoman.16.t:0 "오스만이 우리의 합병을 요구하다"
- ottoman.16.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔다. 어떻게 진행하면 좋을까?"
+ ottoman.16.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.16.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.16.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.17.t:0 "Yemen Folds"
- ottoman.17.d:0 "The weak Arab state of Yemen has collapsed under the might of our Army."
+ ottoman.17.t:0 "예멘이 굴복하다"
+ ottoman.17.d:0 "아랍의 약체인 예멘은 우리 육군의 힘으로 무너졌습니다."
  ottoman.17.a:0 "승리다!"
  ottoman.18.t:0 "예멘이 요구를 거부하다"
- ottoman.18.d:0 "The Kingdom Of Syria has denied our offer "
+ ottoman.18.d:0 "시리아 왕국이 우리 제안을 거부했습니다."
  ottoman.18.a:0 "우리는 전쟁을 준비해야 한다."
  ottoman.19.t:0 "오스만이 우리의 합병을 요구하다"
- ottoman.19.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔다. 어떻게 진행하면 좋을까?"
+ ottoman.19.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.19.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.19.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.20.t:0 "Oman Folds"
- ottoman.20.d:0 "The weak Arab state of Oman has collapsed under the might of our Army."
+ ottoman.20.t:0 "오만이 굴복하다"
+ ottoman.20.d:0 "아랍의 약체인 오만은 우리 육군의 힘으로 무너졌습니다."
  ottoman.20.a:0 "승리다!"
  ottoman.21.t:0 "오만이 요구를 거부하다"
- ottoman.21.d:0 "Oman has denied our offer "
+ ottoman.21.d:0 "오만이 우리 제안을 거부했습니다."
  ottoman.21.a:0 "우리는 전쟁을 준비해야 한다."
- ottoman.22.t:0 "The Ottoman Empire Demands Egypt."
- ottoman.22.d:0 "The fast growning Ottoman is now demanding the Khedivate of Egypt! How should we proceed?"
+ ottoman.22.t:0 "오스만 제국이 이집트를 요구하다"
+ ottoman.22.d:0 "빠르게 성장하고 있는 오스만은 이제 이집트 태수령을 요구하고 있습니다! 어떻게 진행하면 좋겠습니까?"
  ottoman.22.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
- ottoman.22.b:0 "No! The Commonwealth will stand steadfast against imperialists!"
- ottoman.23.t:0 "The British Fold"
- ottoman.23.d:0 "The British Empire has caved into our demands and is now transferring Egypt into our control."
+ ottoman.22.b:0 "안 된다! 영연방은 제국주의자들에게 단호히 대항할 것이다!"
+ ottoman.23.t:0 "영국이 굴복하다"
+ ottoman.23.d:0 "대영제국은 우리의 요구에 굴복했고 이제 이집트를 우리의 지배로 이양하고 있습니다."
  ottoman.23.a:0 "승리다!"
- ottoman.24.t:0 "Britain이(가) 요구를 거부하다"
- ottoman.24.d:0 "The British Empire has denied our offer "
+ ottoman.24.t:0 "영국이 요구를 거부하다"
+ ottoman.24.d:0 "대영제국이 우리 제안을 거부했습니다."
  ottoman.24.a:0 "우리는 전쟁을 준비해야 한다."
  ottoman.25.t:0 "오스만이 우리의 합병을 요구하다"
- ottoman.25.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔다. 어떻게 진행하면 좋을까?"
+ ottoman.25.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.25.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.25.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.26.t:0 "[From.GetName] Folds"
- ottoman.26.d:0 "The weak [From.GetAdjective]s has collapsed under the might of our Army."
+ ottoman.26.t:0 "[From.GetName]이(가) 굴복하다"
+ ottoman.26.d:0 "약한 [From.GetAdjective]은(는) 우리 군대의 힘 앞에 무너졌습니다."
  ottoman.26.a:0 "승리다!"
  ottoman.27.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.27.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했다."
+ ottoman.27.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했습니다."
  ottoman.27.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다."
  ottoman.28.t:0 "오스만이 우리의 합병을 요구하다"
- ottoman.28.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔다. 어떻게 진행하면 좋을까?"
+ ottoman.28.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.28.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.28.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.29.t:0 "[From.GetName] Folds"
- ottoman.29.d:0 "The weak [From.GetAdjective]s has collapsed under the might of our Army."
+ ottoman.29.t:0 "[From.GetName]이(가) 굴복하다"
+ ottoman.29.d:0 "약한 [From.GetAdjective]은(는) 우리 군대의 힘 앞에 무너졌습니다."
  ottoman.29.a:0 "승리다!"
  ottoman.30.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.30.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했다."
- ottoman.30.a:0 "[From.GetAdjective]s will pay for this"
+ ottoman.30.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했습니다."
+ ottoman.30.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다."
  ottoman.31.t:0 "오스만이 우리의 합병을 요구하다"
- ottoman.31.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔다. 어떻게 진행하면 좋을까?"
+ ottoman.31.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.31.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.31.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.32.t:0 "[From.GetName] Folds"
- ottoman.32.d:0 "The weak [From.GetAdjective]s has collapsed under the might of our Army."
+ ottoman.32.t:0 "[From.GetName]이(가) 굴복하다"
+ ottoman.32.d:0 "약한 [From.GetAdjective]은(는) 우리 군대의 힘 앞에 무너졌습니다."
  ottoman.32.a:0 "승리다!"
  ottoman.33.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.33.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했다."
+ ottoman.33.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했습니다."
  ottoman.33.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다."
  ottoman.34.t:0 "오스만이 우리의 합병을 요구하다"
- ottoman.34.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔다. 어떻게 진행하면 좋을까?"
+ ottoman.34.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.34.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.34.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.35.t:0 "[From.GetName] Folds"
- ottoman.35.d:0 "The weak [From.GetAdjective]s has collapsed under the might of our Army."
+ ottoman.35.t:0 "[From.GetName]이(가) 굴복하다"
+ ottoman.35.d:0 "약한 [From.GetAdjective]은(는) 우리 군대의 힘 앞에 무너졌습니다."
  ottoman.35.a:0 "승리다!"
  ottoman.36.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.36.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했다."
+ ottoman.36.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했습니다."
  ottoman.36.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다."
  ottoman.37.t:0 "오스만은 우리 문 앞에 있다."
- ottoman.37.d:0 "The Ottoman Empire has recently pushed up into the Balkans swallowing up our neighbours. Now they demand control over our government and oil fields. How should we proceed?"
+ ottoman.37.d:0 "오스만 제국이 최근 발칸 반도에 밀어닥쳐 우리 이웃을 삼켜버렸습니다. 이제 그들은 우리 정부와 유전들에 대한 통제를 요구합니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.37.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.37.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.38.t:0 "[From.GetName] Folds"
- ottoman.38.d:0 "The weak [From.GetAdjective]s has collapsed under the might of our Army."
- ottoman.38.a:0 "Demand full annexation"
- ottoman.38.b:0 "Annex the coast and establish a puppet"
+ ottoman.38.t:0 "[From.GetName]이(가) 굴복하다"
+ ottoman.38.d:0 "약한 [From.GetAdjective]은(는) 우리 군대의 힘 앞에 무너졌습니다."
+ ottoman.38.a:0 "완전한 합병을 요구하라."
+ ottoman.38.b:0 "해안을 합병하고 꼭두각시를 세워라."
  ottoman.39.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.39.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했다."
+ ottoman.39.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했습니다."
  ottoman.39.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다."
  ottoman.40.t:0 "오스만이 우리의 합병을 요구하다"
- ottoman.40.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔다. 어떻게 진행하면 좋을까?"
+ ottoman.40.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.40.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.40.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.41.t:0 "[From.GetName] Folds"
- ottoman.41.d:0 "The weak [From.GetAdjective]s has collapsed under the might of our Army."
+ ottoman.41.t:0 "[From.GetName]이(가) 굴복하다"
+ ottoman.41.d:0 "약한 [From.GetAdjective]은(는) 우리 군대의 힘 앞에 무너졌습니다."
  ottoman.41.a:0 "승리다!"
  ottoman.42.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.42.d:0 "[From.GetAdjective]s have denied our offer"
- ottoman.42.a:0 "[From.GetAdjective]s will pay for this."
+ ottoman.42.d:0 "[From.GetAdjective]이(가) 우리 제안을 거부하다"
+ ottoman.42.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다."
  ottoman.43.t:0 "오스만이 우리의 합병을 요구하다"
- ottoman.43.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔다. 어떻게 진행하면 좋을까?"
+ ottoman.43.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.43.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.43.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.44.t:0 "[From.GetName] Folds"
- ottoman.44.d:0 "The weak [From.GetAdjective]s has collapsed under the might of our Army."
+ ottoman.44.t:0 "[From.GetName]이(가) 굴복하다"
+ ottoman.44.d:0 "약한 [From.GetAdjective]은(는) 우리 군대의 힘 앞에 무너졌습니다."
  ottoman.44.a:0 "승리다!"
  ottoman.45.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.45.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했다."
+ ottoman.45.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했습니다."
  ottoman.45.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다."
  ottoman.46.t:0 "오스만이 우리의 합병을 요구하다"
- ottoman.46.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔다. 어떻게 진행하면 좋을까?"
+ ottoman.46.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.46.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.46.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.47.t:0 "[From.GetName] Folds"
- ottoman.47.d:0 "The weak [From.GetAdjective]s has collapsed under the might of our Army."
+ ottoman.47.t:0 "[From.GetName]이(가) 굴복하다"
+ ottoman.47.d:0 "약한 [From.GetAdjective]은(는) 우리 군대의 힘 앞에 무너졌습니다."
  ottoman.47.a:0 "승리다!"
  ottoman.48.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.48.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했다."
+ ottoman.48.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했습니다."
  ottoman.48.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다. "
  ottoman.49.t:0 "코카서스 지역과 광대한 스텝을 요구하는 오스만족"
- ottoman.49.d:0 "오스만 제국은 지금 우리가 정복한 이슬람 땅을 요구하고 있다. 만약 이 거래를 받아들인다면 우리는 엄청난 양의 자원과 많은 대중들의 중심지를 잃게 될 것이다. 어떻게 진행하면 좋을까?"
+ ottoman.49.d:0 "오스만 제국은 지금 우리가 정복한 이슬람 땅을 요구하고 있습니다. 만약 이 거래를 받아들인다면 우리는 엄청난 양의 자원과 많은 대중들의 중심지를 잃게 될 것입니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.49.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.49.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
  ottoman.50.t:0 "[From.GetName]이(가) 굴복하다"
- ottoman.50.d:0 "한때 강했던 러시아 제국이 우리의 요구에 굴복했다! 오늘날 우리는 투르크인과 이슬람 인구를 모두 합쳤기 때문에 제국 전역에 걸쳐 승리 행진을 개시한다."
+ ottoman.50.d:0 "한때 강했던 러시아 제국이 우리의 요구에 굴복했습니다! 오늘날 우리는 투르크인과 이슬람 인구를 모두 합쳤기 때문에 제국 전역에 걸쳐 승리 행진을 개시합니다."
  ottoman.50.a:0 "승리다!"
  ottoman.51.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.51.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했다."
+ ottoman.51.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했습니다."
  ottoman.51.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다."
  rename.341.t:0 "이스탄불의 개명"
- rename.341.d:0 "인스탄불을 수복했으니, 다시 차르그라드로 이름을 바꾸든지, 아니면 그대로 놔두든지 둘 수 있다. 어떻게 해야 하는가?"
+ rename.341.d:0 "이스탄불을 수복했으니, 다시 차르그라드로 이름을 바꾸든지, 아니면 그대로 놔두든지 둘 수 있습니다. 어떻게 해야 합니까?"
  rename.341.a:0 "이름을 바꿔라."
  rename.341.b:0 "그대로 놔둬라."
 
