--- a/localisation/ger_focus_l_english.yml
+++ b/localisation/ger_focus_l_english.yml
@@ -41,7 +41,7 @@
  GER_slot_1_desc:0 "우리나라의 급속하고 지속적인 산업화는 우리가 추구해야 할 연구개발의 새로운 기회를 열어 주었습니다."
  GER_great_GER:0 "대독일국"
  GER_great_GER_desc:0 "대독일국이 형성되는 것은 오랫동안 불가능하다고 여겨져 왔습니다. 우리는 이제 대독일국을 성공적으로 형성함으로써 세계가 잘못되었다는 것을 증명할 수 있습니다."
- GER_integrate_Tyrol:0 "남티롤 재통힙"
+ GER_integrate_Tyrol:0 "남티롤 재통합"
  GER_integrate_Tyrol_desc:0 "남티롤은 독일의 정당한 지역이며, 이 지역의 재통합은 필수적입니다."
  GER_inv_NOR:0 "노르웨이와의 동맹"
  GER_inv_NOR_desc:0 "노르웨이는 발트해에서 중요한 위치를 차지하고 있고, 그 동맹은 앞으로 다가올 어떤 전쟁에서도 중요한 위치를 차지할 것입니다."
